# serializer version: 1
# name: test_write_features[en]
  '''
  ## Features
  Abbr - Case - Compound - Definite - Degree - Gender - Mood - Number - Tense - VerbForm - Voice
  
  ### Features: **Abbr**
  <code>Abbr</code> occurs with 1 value: `Yes`.
  
  57,883 tokens (2%) have a non-empty value of <code>Abbr</code>.
   The feature is used with 6 part-of-speech tags:
  
  
  
  ### Features: **Case**
  <code>Case</code> occurs with 3 different values: `Acc`, `Gen`, `Nom`.
  
  1,262,438 tokens (44%) have a non-empty value of <code>Case</code>.
   The feature is used with 7 part-of-speech tags:
   56,044 tokens (4%) have multiple values of `Case`.
  
  
  
  ### Features: **Compound**
  <code>Compound</code> occurs with 1 value: `Yes`.
  
  4,847 tokens (0%) have a non-empty value of <code>Compound</code>.
   The feature is used with 3 part-of-speech tags:
  
  
  
  ### Features: **Definite**
  <code>Definite</code> occurs with 2 different values: `Def`, `Ind`.
  
  1,089,520 tokens (38%) have a non-empty value of <code>Definite</code>.
   The feature is used with 10 part-of-speech tags:
   90,435 tokens (8%) have multiple values of `Definite`.
  
  
  
  ### Features: **Degree**
  <code>Degree</code> occurs with 3 different values: `Cmp`, `Pos`, `Sup`.
  
  160,898 tokens (6%) have a non-empty value of <code>Degree</code>.
   The feature is used with 2 part-of-speech tags:
  
  
  
  ### Features: **Gender**
  <code>Gender</code> occurs with 3 different values: `Com`, `Masc`, `Neut`.
  
  1,093,722 tokens (38%) have a non-empty value of <code>Gender</code>.
   The feature is used with 9 part-of-speech tags:
   157,296 tokens (14%) have multiple values of `Gender`.
  
  
  
  ### Features: **Mood**
  <code>Mood</code> occurs with 3 different values: `Imp`, `Ind`, `Sub`.
  
  244,612 tokens (8%) have a non-empty value of <code>Mood</code>.
   The feature is used with 1 part-of-speech tags:
  
  
  
  ### Features: **Number**
  <code>Number</code> occurs with 2 different values: `Plur`, `Sing`.
  
  1,089,833 tokens (38%) have a non-empty value of <code>Number</code>.
   The feature is used with 9 part-of-speech tags:
   45,832 tokens (4%) have multiple values of `Number`.
  
  
  
  ### Features: **Tense**
  <code>Tense</code> occurs with 2 different values: `Past`, `Pres`.
  
  290,132 tokens (10%) have a non-empty value of <code>Tense</code>.
   The feature is used with 2 part-of-speech tags:
  
  
  
  ### Features: **VerbForm**
  <code>VerbForm</code> occurs with 4 different values: `Fin`, `Inf`, `Part`, `Sup`.
  
  427,473 tokens (15%) have a non-empty value of <code>VerbForm</code>.
   The feature is used with 2 part-of-speech tags:
  
  
  
  ### Features: **Voice**
  <code>Voice</code> occurs with 2 different values: `Act`, `Pass`.
  
  380,257 tokens (13%) have a non-empty value of <code>Voice</code>.
   The feature is used with 1 part-of-speech tags:
  
  
  
  
  '''
# ---
# name: test_write_features[sv]
  '''
  ## Särdrag
  Abbr - Case - Compound - Definite - Degree - Gender - Mood - Number - Tense - VerbForm - Voice
  
  ### Särdrag: **Abbr**
  <code>Abbr</code> förekommer med 1 värde: `Yes`.
  
  57 883 tokens (2%) har ett icke-tomt värde av <code>Abbr</code>.
   Detta särdrag är använt tillsammans med 6 ordklasser:
  
  
  
  ### Särdrag: **Case**
  <code>Case</code> förekommer med 3 olika värden: `Acc`, `Gen`, `Nom`.
  
  1 262 438 tokens (44%) har ett icke-tomt värde av <code>Case</code>.
   Detta särdrag är använt tillsammans med 7 ordklasser:
   56 044 tokens (4%) har multipla värden av <code>Case</code>.
  
  
  
  ### Särdrag: **Compound**
  <code>Compound</code> förekommer med 1 värde: `Yes`.
  
  4 847 tokens (0%) har ett icke-tomt värde av <code>Compound</code>.
   Detta särdrag är använt tillsammans med 3 ordklasser:
  
  
  
  ### Särdrag: **Definite**
  <code>Definite</code> förekommer med 2 olika värden: `Def`, `Ind`.
  
  1 089 520 tokens (38%) har ett icke-tomt värde av <code>Definite</code>.
   Detta särdrag är använt tillsammans med 10 ordklasser:
   90 435 tokens (8%) har multipla värden av <code>Definite</code>.
  
  
  
  ### Särdrag: **Degree**
  <code>Degree</code> förekommer med 3 olika värden: `Cmp`, `Pos`, `Sup`.
  
  160 898 tokens (6%) har ett icke-tomt värde av <code>Degree</code>.
   Detta särdrag är använt tillsammans med 2 ordklasser:
  
  
  
  ### Särdrag: **Gender**
  <code>Gender</code> förekommer med 3 olika värden: `Com`, `Masc`, `Neut`.
  
  1 093 722 tokens (38%) har ett icke-tomt värde av <code>Gender</code>.
   Detta särdrag är använt tillsammans med 9 ordklasser:
   157 296 tokens (14%) har multipla värden av <code>Gender</code>.
  
  
  
  ### Särdrag: **Mood**
  <code>Mood</code> förekommer med 3 olika värden: `Imp`, `Ind`, `Sub`.
  
  244 612 tokens (8%) har ett icke-tomt värde av <code>Mood</code>.
   Detta särdrag är använt tillsammans med 1 ordklasser:
  
  
  
  ### Särdrag: **Number**
  <code>Number</code> förekommer med 2 olika värden: `Plur`, `Sing`.
  
  1 089 833 tokens (38%) har ett icke-tomt värde av <code>Number</code>.
   Detta särdrag är använt tillsammans med 9 ordklasser:
   45 832 tokens (4%) har multipla värden av <code>Number</code>.
  
  
  
  ### Särdrag: **Tense**
  <code>Tense</code> förekommer med 2 olika värden: `Past`, `Pres`.
  
  290 132 tokens (10%) har ett icke-tomt värde av <code>Tense</code>.
   Detta särdrag är använt tillsammans med 2 ordklasser:
  
  
  
  ### Särdrag: **VerbForm**
  <code>VerbForm</code> förekommer med 4 olika värden: `Fin`, `Inf`, `Part`, `Sup`.
  
  427 473 tokens (15%) har ett icke-tomt värde av <code>VerbForm</code>.
   Detta särdrag är använt tillsammans med 2 ordklasser:
  
  
  
  ### Särdrag: **Voice**
  <code>Voice</code> förekommer med 2 olika värden: `Act`, `Pass`.
  
  380 257 tokens (13%) har ett icke-tomt värde av <code>Voice</code>.
   Detta särdrag är använt tillsammans med 1 ordklasser:
  
  
  
  
  '''
# ---
# name: test_write_morphology[en]
  '''
  ## Morphology
  
  ### Morphosyntactic descriptors (MSD)
  
  
  
  MSD | Frequency | Percent
  --- | ---: | ---:
  AB | 70,456 | 2.43%
  AB.AN | 22,440 | 0.77%
  AB.KOM | 8,987 | 0.31%
  AB.POS | 15,452 | 0.53%
  AB.SUV | 3,889 | 0.13%
  DT.MAS.SIN.DEF | 1 | < 0.01%
  DT.NEU.SIN.DEF | 9,677 | 0.33%
  DT.NEU.SIN.IND | 19,816 | 0.68%
  DT.NEU.SIN.IND+DEF | 144 | < 0.01%
  DT.UTR+NEU.PLU.DEF | 14,188 | 0.49%
  DT.UTR+NEU.PLU.IND | 1,026 | 0.04%
  DT.UTR+NEU.PLU.IND+DEF | 2,269 | 0.08%
  DT.UTR+NEU.SIN+PLU.IND | 1,170 | 0.04%
  DT.UTR+NEU.SIN.DEF | 6 | < 0.01%
  DT.UTR+NEU.SIN.IND | 834 | 0.03%
  DT.UTR.SIN.DEF | 17,851 | 0.62%
  DT.UTR.SIN.IND | 34,408 | 1.19%
  DT.UTR.SIN.IND+DEF | 241 | < 0.01%
  HA | 13,218 | 0.46%
  HD.NEU.SIN.IND | 164 | < 0.01%
  HD.UTR+NEU.PLU.IND | 823 | 0.03%
  HD.UTR.SIN.IND | 420 | 0.01%
  HP.-.-.- | 40,259 | 1.39%
  HP.NEU.SIN.IND | 3,996 | 0.14%
  HP.UTR+NEU.PLU.IND | 205 | < 0.01%
  HP.UTR.SIN.IND | 262 | < 0.01%
  HS.DEF | 186 | < 0.01%
  IE | 45,393 | 1.57%
  IN | 840 | 0.03%
  JJ.AN | 20 | < 0.01%
  JJ.KOM.UTR+NEU.SIN+PLU.IND+DEF.NOM | 10,870 | 0.38%
  JJ.POS.MAS.SIN.DEF.GEN | 95 | < 0.01%
  JJ.POS.MAS.SIN.DEF.NOM | 268 | < 0.01%
  JJ.POS.NEU.SIN.IND+DEF.NOM | 375 | 0.01%
  JJ.POS.NEU.SIN.IND.NOM | 17,527 | 0.61%
  JJ.POS.UTR+NEU.PLU.IND+DEF.GEN | 230 | < 0.01%
  JJ.POS.UTR+NEU.PLU.IND+DEF.NOM | 43,460 | 1.50%
  JJ.POS.UTR+NEU.PLU.IND.NOM | 4,953 | 0.17%
  JJ.POS.UTR+NEU.SIN+PLU.IND+DEF.NOM | 3,307 | 0.11%
  JJ.POS.UTR+NEU.SIN.DEF.GEN | 29 | < 0.01%
  JJ.POS.UTR+NEU.SIN.DEF.NOM | 16,664 | 0.58%
  JJ.POS.UTR.SIN.IND+DEF.NOM | 430 | 0.01%
  JJ.POS.UTR.SIN.IND.NOM | 31,584 | 1.09%
  JJ.SUV.MAS.SIN.DEF.NOM | 1 | < 0.01%
  JJ.SUV.UTR+NEU.PLU.DEF.NOM | 187 | < 0.01%
  JJ.SUV.UTR+NEU.PLU.IND.NOM | 28 | < 0.01%
  JJ.SUV.UTR+NEU.SIN+PLU.DEF.NOM | 2,228 | 0.08%
  JJ.SUV.UTR+NEU.SIN+PLU.IND.NOM | 296 | 0.01%
  KN | 117,948 | 4.07%
  KN.AN | 24 | < 0.01%
  MAD | 131,026 | 4.52%
  MID | 101,646 | 3.51%
  NN.-.-.-.- | 206 | < 0.01%
  NN.AN | 37,351 | 1.29%
  NN.NEU.PLU.DEF.GEN | 864 | 0.03%
  NN.NEU.PLU.DEF.NOM | 12,372 | 0.43%
  NN.NEU.PLU.IND.GEN | 1,057 | 0.04%
  NN.NEU.PLU.IND.NOM | 43,022 | 1.49%
  NN.NEU.SIN.DEF.GEN | 7,186 | 0.25%
  NN.NEU.SIN.DEF.NOM | 59,061 | 2.04%
  NN.NEU.SIN.IND.GEN | 699 | 0.02%
  NN.NEU.SIN.IND.NOM | 110,212 | 3.80%
  NN.UTR.-.-.- | 199 | < 0.01%
  NN.UTR.-.-.SMS | 4,845 | 0.17%
  NN.UTR.PLU.DEF.GEN | 3,430 | 0.12%
  NN.UTR.PLU.DEF.NOM | 25,975 | 0.90%
  NN.UTR.PLU.IND.GEN | 3,134 | 0.11%
  NN.UTR.PLU.IND.NOM | 101,252 | 3.50%
  NN.UTR.SIN.DEF.GEN | 14,776 | 0.51%
  NN.UTR.SIN.DEF.NOM | 123,357 | 4.26%
  NN.UTR.SIN.IND.GEN | 2,338 | 0.08%
  NN.UTR.SIN.IND.NOM | 185,208 | 6.39%
  PAD | 93,999 | 3.24%
  PC.PRF.MAS.SIN.DEF.GEN | 18 | < 0.01%
  PC.PRF.MAS.SIN.DEF.NOM | 41 | < 0.01%
  PC.PRF.NEU.SIN.IND.NOM | 5,665 | 0.20%
  PC.PRF.UTR+NEU.PLU.IND+DEF.GEN | 12 | < 0.01%
  PC.PRF.UTR+NEU.PLU.IND+DEF.NOM | 13,568 | 0.47%
  PC.PRF.UTR+NEU.SIN.DEF.NOM | 2,723 | 0.09%
  PC.PRF.UTR.SIN.IND.NOM | 9,691 | 0.33%
  PC.PRS.UTR+NEU.SIN+PLU.IND+DEF.NOM | 15,494 | 0.53%
  PL | 15,486 | 0.53%
  PM.GEN | 3,258 | 0.11%
  PM.NOM | 102,747 | 3.55%
  PM.SMS | 10 | < 0.01%
  PN.MAS.SIN.DEF.SUB+OBJ | 31 | < 0.01%
  PN.NEU.SIN.DEF.SUB+OBJ | 45,180 | 1.56%
  PN.NEU.SIN.IND.SUB+OBJ | 2,581 | 0.09%
  PN.UTR+NEU.PLU.DEF.OBJ | 1,393 | 0.05%
  PN.UTR+NEU.PLU.DEF.SUB | 3,700 | 0.13%
  PN.UTR+NEU.PLU.DEF.SUB+OBJ | 558 | 0.02%
  PN.UTR+NEU.PLU.IND.SUB+OBJ | 2,621 | 0.09%
  PN.UTR+NEU.SIN+PLU.DEF.OBJ | 11,049 | 0.38%
  PN.UTR.PLU.DEF.OBJ | 1,022 | 0.04%
  PN.UTR.PLU.DEF.SUB | 11,788 | 0.41%
  PN.UTR.SIN.DEF.OBJ | 840 | 0.03%
  PN.UTR.SIN.DEF.SUB | 8,164 | 0.28%
  PN.UTR.SIN.DEF.SUB+OBJ | 3,143 | 0.11%
  PN.UTR.SIN.IND.SUB | 4,040 | 0.14%
  PN.UTR.SIN.IND.SUB+OBJ | 1,931 | 0.07%
  PP | 358,838 | 12.39%
  PP.AN | 10 | < 0.01%
  PS.NEU.SIN.DEF | 2,345 | 0.08%
  PS.UTR+NEU.PLU.DEF | 1,976 | 0.07%
  PS.UTR+NEU.SIN+PLU.DEF | 1,418 | 0.05%
  PS.UTR.SIN.DEF | 3,894 | 0.13%
  RG.NOM | 180,310 | 6.22%
  RG.SMS | 11 | < 0.01%
  RO.MAS.SIN.IND+DEF.NOM | 5 | < 0.01%
  RO.NOM | 2,892 | 0.10%
  SN | 53,560 | 1.85%
  UO | 2,274 | 0.08%
  VB.AN | 28 | < 0.01%
  VB.IMP.AKT | 1,765 | 0.06%
  VB.INF.AKT | 95,313 | 3.29%
  VB.INF.SFO | 19,930 | 0.69%
  VB.KON.PRS.AKT | 44 | < 0.01%
  VB.KON.PRT.AKT | 118 | < 0.01%
  VB.PRS.AKT | 184,442 | 6.37%
  VB.PRS.SFO | 35,885 | 1.24%
  VB.PRT.AKT | 19,251 | 0.66%
  VB.PRT.SFO | 3,293 | 0.11%
  VB.SUP.AKT | 14,926 | 0.52%
  VB.SUP.SFO | 5,290 | 0.18%
  
  '''
# ---
# name: test_write_morphology[sv]
  '''
  ## Morfologi
  
  ### Fördelning av ordklassernas särdrag
  
  
  
  Ordklassernas särdrag | Frequency | Percent
  --- | ---: | ---:
  AB | 70 456 | 2,43%
  AB.AN | 22 440 | 0,77%
  AB.KOM | 8 987 | 0,31%
  AB.POS | 15 452 | 0,53%
  AB.SUV | 3 889 | 0,13%
  DT.MAS.SIN.DEF | 1 | < 0,01%
  DT.NEU.SIN.DEF | 9 677 | 0,33%
  DT.NEU.SIN.IND | 19 816 | 0,68%
  DT.NEU.SIN.IND+DEF | 144 | < 0,01%
  DT.UTR+NEU.PLU.DEF | 14 188 | 0,49%
  DT.UTR+NEU.PLU.IND | 1 026 | 0,04%
  DT.UTR+NEU.PLU.IND+DEF | 2 269 | 0,08%
  DT.UTR+NEU.SIN+PLU.IND | 1 170 | 0,04%
  DT.UTR+NEU.SIN.DEF | 6 | < 0,01%
  DT.UTR+NEU.SIN.IND | 834 | 0,03%
  DT.UTR.SIN.DEF | 17 851 | 0,62%
  DT.UTR.SIN.IND | 34 408 | 1,19%
  DT.UTR.SIN.IND+DEF | 241 | < 0,01%
  HA | 13 218 | 0,46%
  HD.NEU.SIN.IND | 164 | < 0,01%
  HD.UTR+NEU.PLU.IND | 823 | 0,03%
  HD.UTR.SIN.IND | 420 | 0,01%
  HP.-.-.- | 40 259 | 1,39%
  HP.NEU.SIN.IND | 3 996 | 0,14%
  HP.UTR+NEU.PLU.IND | 205 | < 0,01%
  HP.UTR.SIN.IND | 262 | < 0,01%
  HS.DEF | 186 | < 0,01%
  IE | 45 393 | 1,57%
  IN | 840 | 0,03%
  JJ.AN | 20 | < 0,01%
  JJ.KOM.UTR+NEU.SIN+PLU.IND+DEF.NOM | 10 870 | 0,38%
  JJ.POS.MAS.SIN.DEF.GEN | 95 | < 0,01%
  JJ.POS.MAS.SIN.DEF.NOM | 268 | < 0,01%
  JJ.POS.NEU.SIN.IND+DEF.NOM | 375 | 0,01%
  JJ.POS.NEU.SIN.IND.NOM | 17 527 | 0,61%
  JJ.POS.UTR+NEU.PLU.IND+DEF.GEN | 230 | < 0,01%
  JJ.POS.UTR+NEU.PLU.IND+DEF.NOM | 43 460 | 1,50%
  JJ.POS.UTR+NEU.PLU.IND.NOM | 4 953 | 0,17%
  JJ.POS.UTR+NEU.SIN+PLU.IND+DEF.NOM | 3 307 | 0,11%
  JJ.POS.UTR+NEU.SIN.DEF.GEN | 29 | < 0,01%
  JJ.POS.UTR+NEU.SIN.DEF.NOM | 16 664 | 0,58%
  JJ.POS.UTR.SIN.IND+DEF.NOM | 430 | 0,01%
  JJ.POS.UTR.SIN.IND.NOM | 31 584 | 1,09%
  JJ.SUV.MAS.SIN.DEF.NOM | 1 | < 0,01%
  JJ.SUV.UTR+NEU.PLU.DEF.NOM | 187 | < 0,01%
  JJ.SUV.UTR+NEU.PLU.IND.NOM | 28 | < 0,01%
  JJ.SUV.UTR+NEU.SIN+PLU.DEF.NOM | 2 228 | 0,08%
  JJ.SUV.UTR+NEU.SIN+PLU.IND.NOM | 296 | 0,01%
  KN | 117 948 | 4,07%
  KN.AN | 24 | < 0,01%
  MAD | 131 026 | 4,52%
  MID | 101 646 | 3,51%
  NN.-.-.-.- | 206 | < 0,01%
  NN.AN | 37 351 | 1,29%
  NN.NEU.PLU.DEF.GEN | 864 | 0,03%
  NN.NEU.PLU.DEF.NOM | 12 372 | 0,43%
  NN.NEU.PLU.IND.GEN | 1 057 | 0,04%
  NN.NEU.PLU.IND.NOM | 43 022 | 1,49%
  NN.NEU.SIN.DEF.GEN | 7 186 | 0,25%
  NN.NEU.SIN.DEF.NOM | 59 061 | 2,04%
  NN.NEU.SIN.IND.GEN | 699 | 0,02%
  NN.NEU.SIN.IND.NOM | 110 212 | 3,80%
  NN.UTR.-.-.- | 199 | < 0,01%
  NN.UTR.-.-.SMS | 4 845 | 0,17%
  NN.UTR.PLU.DEF.GEN | 3 430 | 0,12%
  NN.UTR.PLU.DEF.NOM | 25 975 | 0,90%
  NN.UTR.PLU.IND.GEN | 3 134 | 0,11%
  NN.UTR.PLU.IND.NOM | 101 252 | 3,50%
  NN.UTR.SIN.DEF.GEN | 14 776 | 0,51%
  NN.UTR.SIN.DEF.NOM | 123 357 | 4,26%
  NN.UTR.SIN.IND.GEN | 2 338 | 0,08%
  NN.UTR.SIN.IND.NOM | 185 208 | 6,39%
  PAD | 93 999 | 3,24%
  PC.PRF.MAS.SIN.DEF.GEN | 18 | < 0,01%
  PC.PRF.MAS.SIN.DEF.NOM | 41 | < 0,01%
  PC.PRF.NEU.SIN.IND.NOM | 5 665 | 0,20%
  PC.PRF.UTR+NEU.PLU.IND+DEF.GEN | 12 | < 0,01%
  PC.PRF.UTR+NEU.PLU.IND+DEF.NOM | 13 568 | 0,47%
  PC.PRF.UTR+NEU.SIN.DEF.NOM | 2 723 | 0,09%
  PC.PRF.UTR.SIN.IND.NOM | 9 691 | 0,33%
  PC.PRS.UTR+NEU.SIN+PLU.IND+DEF.NOM | 15 494 | 0,53%
  PL | 15 486 | 0,53%
  PM.GEN | 3 258 | 0,11%
  PM.NOM | 102 747 | 3,55%
  PM.SMS | 10 | < 0,01%
  PN.MAS.SIN.DEF.SUB+OBJ | 31 | < 0,01%
  PN.NEU.SIN.DEF.SUB+OBJ | 45 180 | 1,56%
  PN.NEU.SIN.IND.SUB+OBJ | 2 581 | 0,09%
  PN.UTR+NEU.PLU.DEF.OBJ | 1 393 | 0,05%
  PN.UTR+NEU.PLU.DEF.SUB | 3 700 | 0,13%
  PN.UTR+NEU.PLU.DEF.SUB+OBJ | 558 | 0,02%
  PN.UTR+NEU.PLU.IND.SUB+OBJ | 2 621 | 0,09%
  PN.UTR+NEU.SIN+PLU.DEF.OBJ | 11 049 | 0,38%
  PN.UTR.PLU.DEF.OBJ | 1 022 | 0,04%
  PN.UTR.PLU.DEF.SUB | 11 788 | 0,41%
  PN.UTR.SIN.DEF.OBJ | 840 | 0,03%
  PN.UTR.SIN.DEF.SUB | 8 164 | 0,28%
  PN.UTR.SIN.DEF.SUB+OBJ | 3 143 | 0,11%
  PN.UTR.SIN.IND.SUB | 4 040 | 0,14%
  PN.UTR.SIN.IND.SUB+OBJ | 1 931 | 0,07%
  PP | 358 838 | 12,39%
  PP.AN | 10 | < 0,01%
  PS.NEU.SIN.DEF | 2 345 | 0,08%
  PS.UTR+NEU.PLU.DEF | 1 976 | 0,07%
  PS.UTR+NEU.SIN+PLU.DEF | 1 418 | 0,05%
  PS.UTR.SIN.DEF | 3 894 | 0,13%
  RG.NOM | 180 310 | 6,22%
  RG.SMS | 11 | < 0,01%
  RO.MAS.SIN.IND+DEF.NOM | 5 | < 0,01%
  RO.NOM | 2 892 | 0,10%
  SN | 53 560 | 1,85%
  UO | 2 274 | 0,08%
  VB.AN | 28 | < 0,01%
  VB.IMP.AKT | 1 765 | 0,06%
  VB.INF.AKT | 95 313 | 3,29%
  VB.INF.SFO | 19 930 | 0,69%
  VB.KON.PRS.AKT | 44 | < 0,01%
  VB.KON.PRT.AKT | 118 | < 0,01%
  VB.PRS.AKT | 184 442 | 6,37%
  VB.PRS.SFO | 35 885 | 1,24%
  VB.PRT.AKT | 19 251 | 0,66%
  VB.PRT.SFO | 3 293 | 0,11%
  VB.SUP.AKT | 14 926 | 0,52%
  VB.SUP.SFO | 5 290 | 0,18%
  
  '''
# ---
# name: test_write_pos_tags[en]
  '''
  ## POS Tags
  
  The following POS tags is present in this corpus:
  AB - DT - HA - HD - HP - HS - IE - IN - JJ - KN - MAD - MID - NN - PAD - PC - PL - PM - PN - PP - PS - RG - RO - SN - UO - VB
  
  ### Distribution of POS-tags
  
  Part-Of-Speech | Frequency | Percent (%)
  --- | ---: | ---:
  NN | 736544 | 25.42%
  VB | 380285 | 13.13%
  PP | 358848 | 12.39%
  RG | 180321 | 6.22%
  JJ | 132552 | 4.58%
  MAD | 131026 | 4.52%
  AB | 121224 | 4.18%
  KN | 117972 | 4.07%
  PM | 106015 | 3.66%
  MID | 101646 | 3.51%
  DT | 101631 | 3.51%
  PN | 98041 | 3.38%
  PAD | 93999 | 3.24%
  SN | 53560 | 1.85%
  PC | 47212 | 1.63%
  IE | 45393 | 1.57%
  HP | 44722 | 1.54%
  PL | 15486 | 0.53%
  HA | 13218 | 0.46%
  PS | 9633 | 0.33%
  RO | 2897 | 0.10%
  UO | 2274 | 0.08%
  HD | 1407 | 0.05%
  IN | 840 | 0.03%
  HS | 186 | 0.01%
  
  
  ### POS Tag: **AB**
  There are 121,224 (4%) `AB` tokens. Out of 25 observed tags, the rank of `AB` is: 7 in number of tokens.
  
  The 5 most frequent `AB` base forms: `inte`, `även`, `därmed`, `m.m.`, `delvis`
  
  The 5 most frequent `AB` tokens: `inte`, `även`, `Därmed`, `m.m.`, `delvis`
  
  
  #### POS Tag: **AB**, features
  
  ##### AB and Abbr
  
  22,438 `AB` tokens (19% of all `AB` tokens) have a non-empty value of `Abbr`.
  
  `AB` tokens may have the following values of `Abbr`:
  
  - `Yes` (22,438; 19%)
  - `<missing>` (98,786; 81%)
  
  ##### AB and Degree
  
  28,357 `AB` tokens (23% of all `AB` tokens) have a non-empty value of `Degree`.
  
  `AB` tokens may have the following values of `Degree`:
  
  - `Sup` (3,890; 3%)
  - `Cmp` (8,987; 7%)
  - `Pos` (15,480; 13%)
  - `<missing>` (92,867; 77%)
  
  
  ### POS Tag: **DT**
  There are 101,631 (4%) `DT` tokens. Out of 25 observed tags, the rank of `DT` is: 11 in number of tokens.
  
  The 5 most frequent `DT` base forms: `en`, `den`, `denna`, `någon`, `all`
  
  The 5 most frequent `DT` tokens: `en`, `ett`, `den`, `de`, `det`
  
  
  #### POS Tag: **DT**, features
  
  ##### DT and Definite
  
  101,631 `DT` tokens (100% of all `DT` tokens) have a non-empty value of `Definite`.
  
  `DT` tokens may have the following values of `Definite`:
  
  - `Def,Ind` (2,654; 3%)
  - `Def` (41,722; 41%)
  - `Ind` (57,255; 56%)
  - `<missing>` (0; 0%)
  
  ##### DT and Gender
  
  101,631 `DT` tokens (100% of all `DT` tokens) have a non-empty value of `Gender`.
  
  `DT` tokens may have the following values of `Gender`:
  
  - `Masc` (1; < 1%)
  - `Com,Neut` (19,491; 19%)
  - `Neut` (29,637; 29%)
  - `Com` (52,502; 52%)
  - `<missing>` (0; 0%)
  
  ##### DT and Number
  
  101,631 `DT` tokens (100% of all `DT` tokens) have a non-empty value of `Number`.
  
  `DT` tokens may have the following values of `Number`:
  
  - `Plur,Sing` (1,170; 1%)
  - `Plur` (17,483; 17%)
  - `Sing` (82,978; 82%)
  - `<missing>` (0; 0%)
  
  
  ### POS Tag: **HA**
  There are 13,218 (< 1%) `HA` tokens. Out of 25 observed tags, the rank of `HA` is: 19 in number of tokens.
  
  The 5 most frequent `HA` base forms: `när`, `hur`, `där`, `som`, `då`
  
  The 5 most frequent `HA` tokens: `när`, `hur`, `där`, `När`, `som`
  
  
  #### POS Tag: **HA**, features
  
  HA not present among features
  
  ### POS Tag: **HD**
  There are 1,407 (< 1%) `HD` tokens. Out of 25 observed tags, the rank of `HD` is: 23 in number of tokens.
  
  The 2 most frequent `HD` base forms: `i vilken mån:7`, `i vilken mån:3`
  
  The 5 most frequent `HD` tokens: `vilka`, `vilken`, `vilket`, `Vilka`, `Vilken`
  
  
  #### POS Tag: **HD**, features
  
  ##### HD and Definite
  
  1,407 `HD` tokens (100% of all `HD` tokens) have a non-empty value of `Definite`.
  
  `HD` tokens may have the following values of `Definite`:
  
  - `Ind` (1,407; 100%)
  - `<missing>` (0; 0%)
  
  ##### HD and Gender
  
  1,407 `HD` tokens (100% of all `HD` tokens) have a non-empty value of `Gender`.
  
  `HD` tokens may have the following values of `Gender`:
  
  - `Neut` (164; 12%)
  - `Com` (420; 30%)
  - `Com,Neut` (823; 58%)
  - `<missing>` (0; 0%)
  
  ##### HD and Number
  
  1,407 `HD` tokens (100% of all `HD` tokens) have a non-empty value of `Number`.
  
  `HD` tokens may have the following values of `Number`:
  
  - `Sing` (584; 42%)
  - `Plur` (823; 58%)
  - `<missing>` (0; 0%)
  
  
  ### POS Tag: **HP**
  There are 44,722 (2%) `HP` tokens. Out of 25 observed tags, the rank of `HP` is: 17 in number of tokens.
  
  The 5 most frequent `HP` base forms: `vad`, `vad för`, `vem`, `vad än`, `såväl som:1`
  
  The 5 most frequent `HP` tokens: `som`, `vad`, `vilket`, `Vad`, `Som`
  
  
  #### POS Tag: **HP**, features
  
  ##### HP and Definite
  
  4,463 `HP` tokens (10% of all `HP` tokens) have a non-empty value of `Definite`.
  
  `HP` tokens may have the following values of `Definite`:
  
  - `Ind` (4,463; 10%)
  - `<missing>` (40,259; 90%)
  
  ##### HP and Gender
  
  4,463 `HP` tokens (10% of all `HP` tokens) have a non-empty value of `Gender`.
  
  `HP` tokens may have the following values of `Gender`:
  
  - `Com,Neut` (205; < 1%)
  - `Com` (262; < 1%)
  - `Neut` (3,996; 9%)
  - `<missing>` (40,259; 90%)
  
  ##### HP and Number
  
  4,463 `HP` tokens (10% of all `HP` tokens) have a non-empty value of `Number`.
  
  `HP` tokens may have the following values of `Number`:
  
  - `Plur` (205; < 1%)
  - `Sing` (4,258; 10%)
  - `<missing>` (40,259; 90%)
  
  
  ### POS Tag: **HS**
  There are 186 (< 1%) `HS` tokens. Out of 25 observed tags, the rank of `HS` is: 25 in number of tokens.
  
  The 2 most frequent `HS` base forms: `vars`, `vem`
  
  The 3 most frequent `HS` tokens: `vars`, `vilkas`, `vems`
  
  
  #### POS Tag: **HS**, features
  
  ##### HS and Definite
  
  186 `HS` tokens (100% of all `HS` tokens) have a non-empty value of `Definite`.
  
  `HS` tokens may have the following values of `Definite`:
  
  - `Def` (186; 100%)
  - `<missing>` (0; 0%)
  
  
  ### POS Tag: **IE**
  There are 45,393 (2%) `IE` tokens. Out of 25 observed tags, the rank of `IE` is: 16 in number of tokens.
  
  The 5 most frequent `IE` base forms: `att`, `ha att göra:2`, `ha att göra:12`, `ha att göra:26`, `ha att göra:15`
  
  The 5 most frequent `IE` tokens: `att`, `Att`, `geno`, `at`, `–`
  
  
  #### POS Tag: **IE**, features
  
  IE not present among features
  
  ### POS Tag: **IN**
  There are 840 (< 1%) `IN` tokens. Out of 25 observed tags, the rank of `IN` is: 24 in number of tokens.
  
  The 5 most frequent `IN` base forms: `nej`, `ja`, `jo`, `tack`, `nä`
  
  The 5 most frequent `IN` tokens: `nej`, `ja`, `Nej`, `Ja`, `Tack`
  
  
  #### POS Tag: **IN**, features
  
  IN not present among features
  
  ### POS Tag: **JJ**
  There are 132,552 (5%) `JJ` tokens. Out of 25 observed tags, the rank of `JJ` is: 5 in number of tokens.
  
  The 5 most frequent `JJ` base forms: `ekonomisk`, `statlig`, `allmän`, `övrig`, `samtlig`
  
  The 5 most frequent `JJ` tokens: `ekonomiska`, `annan`, `allmänna`, `övriga`, `obligatorisk`
  
  
  #### POS Tag: **JJ**, features
  
  ##### JJ and Abbr
  
  12 `JJ` tokens (< 1% of all `JJ` tokens) have a non-empty value of `Abbr`.
  
  `JJ` tokens may have the following values of `Abbr`:
  
  - `Yes` (12; < 1%)
  - `<missing>` (132,540; 100%)
  
  ##### JJ and Case
  
  132,538 `JJ` tokens (100% of all `JJ` tokens) have a non-empty value of `Case`.
  
  `JJ` tokens may have the following values of `Case`:
  
  - `Gen` (348; < 1%)
  - `Nom` (132,190; 100%)
  - `<missing>` (14; < 1%)
  
  ##### JJ and Definite
  
  132,529 `JJ` tokens (100% of all `JJ` tokens) have a non-empty value of `Definite`.
  
  `JJ` tokens may have the following values of `Definite`:
  
  - `Def` (19,453; 15%)
  - `Ind` (54,397; 41%)
  - `Def,Ind` (58,679; 44%)
  - `<missing>` (23; < 1%)
  
  ##### JJ and Degree
  
  132,541 `JJ` tokens (100% of all `JJ` tokens) have a non-empty value of `Degree`.
  
  `JJ` tokens may have the following values of `Degree`:
  
  - `Sup` (2,742; 2%)
  - `Cmp` (10,868; 8%)
  - `Pos` (118,931; 90%)
  - `<missing>` (11; < 1%)
  
  ##### JJ and Gender
  
  132,540 `JJ` tokens (100% of all `JJ` tokens) have a non-empty value of `Gender`.
  
  `JJ` tokens may have the following values of `Gender`:
  
  - `Masc` (378; < 1%)
  - `Neut` (17,920; 14%)
  - `Com` (31,973; 24%)
  - `Com,Neut` (82,269; 62%)
  - `<missing>` (12; < 1%)
  
  ##### JJ and Number
  
  132,536 `JJ` tokens (100% of all `JJ` tokens) have a non-empty value of `Number`.
  
  `JJ` tokens may have the following values of `Number`:
  
  - `Plur,Sing` (16,702; 13%)
  - `Plur` (48,694; 37%)
  - `Sing` (67,140; 51%)
  - `<missing>` (16; < 1%)
  
  
  ### POS Tag: **KN**
  There are 117,972 (4%) `KN` tokens. Out of 25 observed tags, the rank of `KN` is: 8 in number of tokens.
  
  The 5 most frequent `KN` base forms: `och`, `eller`, `samt`, `men`, `både och`
  
  The 5 most frequent `KN` tokens: `och`, `eller`, `som`, `samt`, `men`
  
  
  #### POS Tag: **KN**, features
  
  ##### KN and Abbr
  
  17 `KN` tokens (< 1% of all `KN` tokens) have a non-empty value of `Abbr`.
  
  `KN` tokens may have the following values of `Abbr`:
  
  - `Yes` (17; < 1%)
  - `<missing>` (117,955; 100%)
  
  
  ### POS Tag: **MAD**
  There are 131,026 (5%) `MAD` tokens. Out of 25 observed tags, the rank of `MAD` is: 6 in number of tokens.
  
  The 5 most frequent `MAD` tokens: `.`, `:`, `!`, `?`, `–`
  
  
  #### POS Tag: **MAD**, features
  
  MAD not present among features
  
  ### POS Tag: **MID**
  There are 101,646 (4%) `MID` tokens. Out of 25 observed tags, the rank of `MID` is: 10 in number of tokens.
  
  The 5 most frequent `MID` tokens: `,`, `/`, `:`, `-`, `–`
  
  
  #### POS Tag: **MID**, features
  
  MID not present among features
  
  ### POS Tag: **NN**
  There are 736,544 (25%) `NN` tokens. Out of 25 observed tags, the rank of `NN` is: 1 in number of tokens.
  
  The 5 most frequent `NN` base forms: `riksdag`, `anslag`, `s`, `utgiftsområde`, `utbildning`
  
  The 5 most frequent `NN` tokens: `riksdagen`, `utgiftsområde`, `s`, `anslag`, `enlighet`
  
  
  #### POS Tag: **NN**, features
  
  ##### NN and Abbr
  
  35,393 `NN` tokens (5% of all `NN` tokens) have a non-empty value of `Abbr`.
  
  `NN` tokens may have the following values of `Abbr`:
  
  - `Yes` (35,393; 5%)
  - `<missing>` (701,151; 95%)
  
  ##### NN and Case
  
  695,434 `NN` tokens (94% of all `NN` tokens) have a non-empty value of `Case`.
  
  `NN` tokens may have the following values of `Case`:
  
  - `Gen` (33,556; 5%)
  - `Nom` (661,878; 90%)
  - `<missing>` (41,110; 6%)
  
  ##### NN and Compound
  
  4,826 `NN` tokens (< 1% of all `NN` tokens) have a non-empty value of `Compound`.
  
  `NN` tokens may have the following values of `Compound`:
  
  - `Yes` (4,826; < 1%)
  - `<missing>` (731,718; 99%)
  
  ##### NN and Definite
  
  694,413 `NN` tokens (94% of all `NN` tokens) have a non-empty value of `Definite`.
  
  `NN` tokens may have the following values of `Definite`:
  
  - `Def` (246,895; 34%)
  - `Ind` (447,518; 61%)
  - `<missing>` (42,131; 6%)
  
  ##### NN and Gender
  
  698,790 `NN` tokens (95% of all `NN` tokens) have a non-empty value of `Gender`.
  
  `NN` tokens may have the following values of `Gender`:
  
  - `Neut` (234,585; 32%)
  - `Com` (464,205; 63%)
  - `<missing>` (37,754; 5%)
  
  ##### NN and Number
  
  694,905 `NN` tokens (94% of all `NN` tokens) have a non-empty value of `Number`.
  
  `NN` tokens may have the following values of `Number`:
  
  - `Plur` (188,599; 26%)
  - `Sing` (506,306; 69%)
  - `<missing>` (41,639; 6%)
  
  
  ### POS Tag: **PAD**
  There are 93,999 (3%) `PAD` tokens. Out of 25 observed tags, the rank of `PAD` is: 13 in number of tokens.
  
  The 5 most frequent `PAD` tokens: `)`, `(`, `"`, `]`, `[`
  
  
  #### POS Tag: **PAD**, features
  
  PAD not present among features
  
  ### POS Tag: **PC**
  There are 47,212 (2%) `PC` tokens. Out of 25 observed tags, the rank of `PC` is: 15 in number of tokens.
  
  The 5 most frequent `PC` base forms: `särskilja`, `särskild`, `stärka`, `behandla`, `föreslå`
  
  The 5 most frequent `PC` tokens: `följande`, `särskilda`, `särskild`, `stärkt`, `Särskilda`
  
  
  #### POS Tag: **PC**, features
  
  ##### PC and Case
  
  47,212 `PC` tokens (100% of all `PC` tokens) have a non-empty value of `Case`.
  
  `PC` tokens may have the following values of `Case`:
  
  - `Gen` (30; < 1%)
  - `Nom` (47,182; 100%)
  - `<missing>` (0; 0%)
  
  ##### PC and Definite
  
  47,212 `PC` tokens (100% of all `PC` tokens) have a non-empty value of `Definite`.
  
  `PC` tokens may have the following values of `Definite`:
  
  - `Def` (2,759; 6%)
  - `Ind` (15,356; 33%)
  - `Def,Ind` (29,097; 62%)
  - `<missing>` (0; 0%)
  
  ##### PC and Gender
  
  47,212 `PC` tokens (100% of all `PC` tokens) have a non-empty value of `Gender`.
  
  `PC` tokens may have the following values of `Gender`:
  
  - `Masc` (62; < 1%)
  - `Neut` (5,647; 12%)
  - `Com` (9,709; 21%)
  - `Com,Neut` (31,794; 67%)
  - `<missing>` (0; 0%)
  
  ##### PC and Number
  
  47,212 `PC` tokens (100% of all `PC` tokens) have a non-empty value of `Number`.
  
  `PC` tokens may have the following values of `Number`:
  
  - `Plur` (13,587; 29%)
  - `Plur,Sing` (15,494; 33%)
  - `Sing` (18,131; 38%)
  - `<missing>` (0; 0%)
  
  ##### PC and Tense
  
  47,212 `PC` tokens (100% of all `PC` tokens) have a non-empty value of `Tense`.
  
  `PC` tokens may have the following values of `Tense`:
  
  - `Pres` (15,494; 33%)
  - `Past` (31,718; 67%)
  - `<missing>` (0; 0%)
  
  ##### PC and VerbForm
  
  47,212 `PC` tokens (100% of all `PC` tokens) have a non-empty value of `VerbForm`.
  
  `PC` tokens may have the following values of `VerbForm`:
  
  - `Part` (47,212; 100%)
  - `<missing>` (0; 0%)
  
  
  ### POS Tag: **PL**
  There are 15,486 (< 1%) `PL` tokens. Out of 25 observed tags, the rank of `PL` is: 18 in number of tokens.
  
  The 5 most frequent `PL` base forms: `fram`, `upp`, `ut`, `in`, `om`
  
  The 5 most frequent `PL` tokens: `följande`, `särskilda`, `särskild`, `stärkt`, `Särskilda`
  
  
  #### POS Tag: **PL**, features
  
  PL not present among features
  
  ### POS Tag: **PM**
  There are 106,015 (4%) `PM` tokens. Out of 25 observed tags, the rank of `PM` is: 9 in number of tokens.
  
  The 5 most frequent `PM` base forms: `Jonas`, `Fredrik`, `Stockholm`, `Roger`, `Ebba`
  
  The 5 most frequent `PM` tokens: `SD`, `KD`, `MP`, `Ebba`, `Erik`
  
  
  #### POS Tag: **PM**, features
  
  ##### PM and Case
  
  106,006 `PM` tokens (100% of all `PM` tokens) have a non-empty value of `Case`.
  
  `PM` tokens may have the following values of `Case`:
  
  - `Gen` (3,206; 3%)
  - `Nom` (102,800; 97%)
  - `<missing>` (9; < 1%)
  
  ##### PM and Compound
  
  10 `PM` tokens (< 1% of all `PM` tokens) have a non-empty value of `Compound`.
  
  `PM` tokens may have the following values of `Compound`:
  
  - `Yes` (10; < 1%)
  - `<missing>` (106,005; 100%)
  
  
  ### POS Tag: **PN**
  There are 98,041 (3%) `PN` tokens. Out of 25 observed tags, the rank of `PN` is: 12 in number of tokens.
  
  The 5 most frequent `PN` base forms: `den`, `sig`, `denna`, `ställa sig:2`, `man`
  
  The 5 most frequent `PN` tokens: `det`, `sig`, `detta`, `Det`, `de`
  
  
  #### POS Tag: **PN**, features
  
  ##### PN and Case
  
  98,041 `PN` tokens (100% of all `PN` tokens) have a non-empty value of `Case`.
  
  `PN` tokens may have the following values of `Case`:
  
  - `Acc` (14,305; 15%)
  - `Nom` (27,692; 28%)
  - `Acc,Nom` (56,044; 57%)
  - `<missing>` (0; 0%)
  
  ##### PN and Definite
  
  98,041 `PN` tokens (100% of all `PN` tokens) have a non-empty value of `Definite`.
  
  `PN` tokens may have the following values of `Definite`:
  
  - `Ind` (11,172; 11%)
  - `Def` (86,869; 89%)
  - `<missing>` (0; 0%)
  
  ##### PN and Gender
  
  98,041 `PN` tokens (100% of all `PN` tokens) have a non-empty value of `Gender`.
  
  `PN` tokens may have the following values of `Gender`:
  
  - `Masc` (31; < 1%)
  - `Com,Neut` (19,321; 20%)
  - `Com` (30,928; 32%)
  - `Neut` (47,761; 49%)
  - `<missing>` (0; 0%)
  
  ##### PN and Number
  
  98,041 `PN` tokens (100% of all `PN` tokens) have a non-empty value of `Number`.
  
  `PN` tokens may have the following values of `Number`:
  
  - `Plur,Sing` (11,049; 11%)
  - `Plur` (21,168; 22%)
  - `Sing` (65,824; 67%)
  - `<missing>` (0; 0%)
  
  
  ### POS Tag: **PP**
  There are 358,848 (12%) `PP` tokens. Out of 25 observed tags, the rank of `PP` is: 3 in number of tokens.
  
  The 5 most frequent `PP` base forms: `i`, `för`, `av`, `till`, `om`
  
  The 5 most frequent `PP` tokens: `i`, `för`, `av`, `till`, `om`
  
  
  #### POS Tag: **PP**, features
  
  ##### PP and Abbr
  
  5 `PP` tokens (< 1% of all `PP` tokens) have a non-empty value of `Abbr`.
  
  `PP` tokens may have the following values of `Abbr`:
  
  - `Yes` (5; < 1%)
  - `<missing>` (358,843; 100%)
  
  
  ### POS Tag: **PS**
  There are 9,633 (< 1%) `PS` tokens. Out of 25 observed tags, the rank of `PS` is: 20 in number of tokens.
  
  The 5 most frequent `PS` base forms: `sig`, `vi`, `jag`, `de`, `den`
  
  The 5 most frequent `PS` tokens: `sin`, `sitt`, `sina`, `vår`, `vårt`
  
  
  #### POS Tag: **PS**, features
  
  ##### PS and Definite
  
  9,633 `PS` tokens (100% of all `PS` tokens) have a non-empty value of `Definite`.
  
  `PS` tokens may have the following values of `Definite`:
  
  - `Def` (9,633; 100%)
  - `<missing>` (0; 0%)
  
  ##### PS and Gender
  
  9,633 `PS` tokens (100% of all `PS` tokens) have a non-empty value of `Gender`.
  
  `PS` tokens may have the following values of `Gender`:
  
  - `Neut` (2,345; 24%)
  - `Com,Neut` (3,393; 35%)
  - `Com` (3,895; 40%)
  - `<missing>` (0; 0%)
  
  ##### PS and Number
  
  9,633 `PS` tokens (100% of all `PS` tokens) have a non-empty value of `Number`.
  
  `PS` tokens may have the following values of `Number`:
  
  - `Plur,Sing` (1,417; 15%)
  - `Plur` (1,976; 21%)
  - `Sing` (6,240; 65%)
  - `<missing>` (0; 0%)
  
  
  ### POS Tag: **RG**
  There are 180,321 (6%) `RG` tokens. Out of 25 observed tags, the rank of `RG` is: 4 in number of tokens.
  
  The 5 most frequent `RG` base forms: `V`, `två`, `tre`, `fyra`, `sex`
  
  The 5 most frequent `RG` tokens: `2018`, `2019`, `1`, `2`, `8`
  
  
  #### POS Tag: **RG**, features
  
  ##### RG and Case
  
  180,310 `RG` tokens (100% of all `RG` tokens) have a non-empty value of `Case`.
  
  `RG` tokens may have the following values of `Case`:
  
  - `Nom` (180,310; 100%)
  - `<missing>` (11; < 1%)
  
  ##### RG and Compound
  
  11 `RG` tokens (< 1% of all `RG` tokens) have a non-empty value of `Compound`.
  
  `RG` tokens may have the following values of `Compound`:
  
  - `Yes` (11; < 1%)
  - `<missing>` (180,310; 100%)
  
  
  ### POS Tag: **RO**
  There are 2,897 (< 1%) `RO` tokens. Out of 25 observed tags, the rank of `RO` is: 21 in number of tokens.
  
  The 5 most frequent `RO` base forms: `fyra`, `första gången`, `i första hand:4`, `i första hand:8`, `i första hand:5`
  
  The 5 most frequent `RO` tokens: `första`, `1`, `andra`, `tredje`, `12`
  
  
  #### POS Tag: **RO**, features
  
  ##### RO and Case
  
  2,897 `RO` tokens (100% of all `RO` tokens) have a non-empty value of `Case`.
  
  `RO` tokens may have the following values of `Case`:
  
  - `Nom` (2,897; 100%)
  - `<missing>` (0; 0%)
  
  ##### RO and Definite
  
  5 `RO` tokens (< 1% of all `RO` tokens) have a non-empty value of `Definite`.
  
  `RO` tokens may have the following values of `Definite`:
  
  - `Def,Ind` (5; < 1%)
  - `<missing>` (2,892; 100%)
  
  ##### RO and Gender
  
  5 `RO` tokens (< 1% of all `RO` tokens) have a non-empty value of `Gender`.
  
  `RO` tokens may have the following values of `Gender`:
  
  - `Masc` (5; < 1%)
  - `<missing>` (2,892; 100%)
  
  ##### RO and Number
  
  5 `RO` tokens (< 1% of all `RO` tokens) have a non-empty value of `Number`.
  
  `RO` tokens may have the following values of `Number`:
  
  - `Sing` (5; < 1%)
  - `<missing>` (2,892; 100%)
  
  
  ### POS Tag: **SN**
  There are 53,560 (2%) `SN` tokens. Out of 25 observed tags, the rank of `SN` is: 14 in number of tokens.
  
  The 5 most frequent `SN` base forms: `att`, `om`, `eftersom`, `innan`, `medan`
  
  The 5 most frequent `SN` tokens: `att`, `om`, `Om`, `eftersom`, `Att`
  
  
  #### POS Tag: **SN**, features
  
  SN not present among features
  
  ### POS Tag: **UO**
  There are 2,274 (< 1%) `UO` tokens. Out of 25 observed tags, the rank of `UO` is: 22 in number of tokens.
  
  The 5 most frequent `UO` base forms: `public service`, `au pair`, `à la:16`, `à la`, `vice versa:27`
  
  The 5 most frequent `UO` tokens: `et`, `na`, `örslag`, `S`, `kolverk`
  
  
  #### POS Tag: **UO**, features
  
  UO not present among features
  
  ### POS Tag: **VB**
  There are 380,285 (13%) `VB` tokens. Out of 25 observed tags, the rank of `VB` is: 2 in number of tokens.
  
  The 5 most frequent `VB` base forms: `vara`, `böra`, `föreslå`, `lägga`, `avstyrka`
  
  The 5 most frequent `VB` tokens: `är`, `bör`, `föreslår`, `avstyrker`, `anvisar`
  
  
  #### POS Tag: **VB**, features
  
  ##### VB and Abbr
  
  18 `VB` tokens (< 1% of all `VB` tokens) have a non-empty value of `Abbr`.
  
  `VB` tokens may have the following values of `Abbr`:
  
  - `Yes` (18; < 1%)
  - `<missing>` (380,267; 100%)
  
  ##### VB and Mood
  
  244,612 `VB` tokens (64% of all `VB` tokens) have a non-empty value of `Mood`.
  
  `VB` tokens may have the following values of `Mood`:
  
  - `Sub` (161; < 1%)
  - `Imp` (1,616; < 1%)
  - `Ind` (242,835; 64%)
  - `<missing>` (135,673; 36%)
  
  ##### VB and Tense
  
  242,920 `VB` tokens (64% of all `VB` tokens) have a non-empty value of `Tense`.
  
  `VB` tokens may have the following values of `Tense`:
  
  - `Past` (22,610; 6%)
  - `Pres` (220,310; 58%)
  - `<missing>` (137,365; 36%)
  
  ##### VB and VerbForm
  
  380,261 `VB` tokens (100% of all `VB` tokens) have a non-empty value of `VerbForm`.
  
  `VB` tokens may have the following values of `VerbForm`:
  
  - `Sup` (20,211; 5%)
  - `Inf` (115,019; 30%)
  - `Fin` (245,031; 64%)
  - `<missing>` (24; < 1%)
  
  ##### VB and Voice
  
  380,257 `VB` tokens (100% of all `VB` tokens) have a non-empty value of `Voice`.
  
  `VB` tokens may have the following values of `Voice`:
  
  - `Pass` (64,399; 17%)
  - `Act` (315,858; 83%)
  - `<missing>` (28; < 1%)
  
  
  '''
# ---
# name: test_write_pos_tags[sv]
  '''
  ## Ordklasser
  
  Följande ordklasser förekommer i korpusen:
  AB - DT - HA - HD - HP - HS - IE - IN - JJ - KN - MAD - MID - NN - PAD - PC - PL - PM - PN - PP - PS - RG - RO - SN - UO - VB
  
  ### Fördelning av ordklasser
  
  Ordklass | Antal | Andel (%)
  --- | ---: | ---:
  NN | 736544 | 25.42%
  VB | 380285 | 13.13%
  PP | 358848 | 12.39%
  RG | 180321 | 6.22%
  JJ | 132552 | 4.58%
  MAD | 131026 | 4.52%
  AB | 121224 | 4.18%
  KN | 117972 | 4.07%
  PM | 106015 | 3.66%
  MID | 101646 | 3.51%
  DT | 101631 | 3.51%
  PN | 98041 | 3.38%
  PAD | 93999 | 3.24%
  SN | 53560 | 1.85%
  PC | 47212 | 1.63%
  IE | 45393 | 1.57%
  HP | 44722 | 1.54%
  PL | 15486 | 0.53%
  HA | 13218 | 0.46%
  PS | 9633 | 0.33%
  RO | 2897 | 0.10%
  UO | 2274 | 0.08%
  HD | 1407 | 0.05%
  IN | 840 | 0.03%
  HS | 186 | 0.01%
  
  
  ### Ordklass: **AB**
  Det finns 121 224 (4%) `AB` tokens. Av 25 observerade ordklasser, så är `AB`:s rank: 7 i antalet tokens.
  
  De 5 mest frekventa `AB` grundformer: `inte`, `även`, `därmed`, `m.m.`, `delvis`
  
  De 5 mest frekventa `AB` tokens: `inte`, `även`, `Därmed`, `m.m.`, `delvis`
  
  
  #### Ordklass: **AB**, särdrag
  
  ##### AB och Abbr
  
  22 438 `AB` tokens (19% av alla `AB` tokens) har `Abbr`.
  
  `AB` tokens har följande värden av `Abbr`:
  
  - `Ja (`Yes`)` (22 438; 19%)
  - `<saknas>` (98 786; 81%)
  
  ##### AB och Degree
  
  28 357 `AB` tokens (23% av alla `AB` tokens) har `Degree`.
  
  `AB` tokens har följande värden av `Degree`:
  
  - `Sup` (3 890; 3%)
  - `Cmp` (8 987; 7%)
  - `Pos` (15 480; 13%)
  - `<saknas>` (92 867; 77%)
  
  
  ### Ordklass: **DT**
  Det finns 101 631 (4%) `DT` tokens. Av 25 observerade ordklasser, så är `DT`:s rank: 11 i antalet tokens.
  
  De 5 mest frekventa `DT` grundformer: `en`, `den`, `denna`, `någon`, `all`
  
  De 5 mest frekventa `DT` tokens: `en`, `ett`, `den`, `de`, `det`
  
  
  #### Ordklass: **DT**, särdrag
  
  ##### DT och Definite
  
  101 631 `DT` tokens (100% av alla `DT` tokens) har `Definite`.
  
  `DT` tokens har följande värden av `Definite`:
  
  - `Def,Ind` (2 654; 3%)
  - `Def` (41 722; 41%)
  - `Ind` (57 255; 56%)
  - `<saknas>` (0; 0%)
  
  ##### DT och Gender
  
  101 631 `DT` tokens (100% av alla `DT` tokens) har `Gender`.
  
  `DT` tokens har följande värden av `Gender`:
  
  - `Masc` (1; < 1%)
  - `Com,Neut` (19 491; 19%)
  - `Neut` (29 637; 29%)
  - `Com` (52 502; 52%)
  - `<saknas>` (0; 0%)
  
  ##### DT och Number
  
  101 631 `DT` tokens (100% av alla `DT` tokens) har `Number`.
  
  `DT` tokens har följande värden av `Number`:
  
  - `Plur,Sing` (1 170; 1%)
  - `Plur` (17 483; 17%)
  - `Sing` (82 978; 82%)
  - `<saknas>` (0; 0%)
  
  
  ### Ordklass: **HA**
  Det finns 13 218 (< 1%) `HA` tokens. Av 25 observerade ordklasser, så är `HA`:s rank: 19 i antalet tokens.
  
  De 5 mest frekventa `HA` grundformer: `när`, `hur`, `där`, `som`, `då`
  
  De 5 mest frekventa `HA` tokens: `när`, `hur`, `där`, `När`, `som`
  
  
  #### Ordklass: **HA**, särdrag
  
  Hittade inga särdrag för HA
  
  ### Ordklass: **HD**
  Det finns 1 407 (< 1%) `HD` tokens. Av 25 observerade ordklasser, så är `HD`:s rank: 23 i antalet tokens.
  
  De 2 mest frekventa `HD` grundformer: `i vilken mån:7`, `i vilken mån:3`
  
  De 5 mest frekventa `HD` tokens: `vilka`, `vilken`, `vilket`, `Vilka`, `Vilken`
  
  
  #### Ordklass: **HD**, särdrag
  
  ##### HD och Definite
  
  1 407 `HD` tokens (100% av alla `HD` tokens) har `Definite`.
  
  `HD` tokens har följande värden av `Definite`:
  
  - `Ind` (1 407; 100%)
  - `<saknas>` (0; 0%)
  
  ##### HD och Gender
  
  1 407 `HD` tokens (100% av alla `HD` tokens) har `Gender`.
  
  `HD` tokens har följande värden av `Gender`:
  
  - `Neut` (164; 12%)
  - `Com` (420; 30%)
  - `Com,Neut` (823; 58%)
  - `<saknas>` (0; 0%)
  
  ##### HD och Number
  
  1 407 `HD` tokens (100% av alla `HD` tokens) har `Number`.
  
  `HD` tokens har följande värden av `Number`:
  
  - `Sing` (584; 42%)
  - `Plur` (823; 58%)
  - `<saknas>` (0; 0%)
  
  
  ### Ordklass: **HP**
  Det finns 44 722 (2%) `HP` tokens. Av 25 observerade ordklasser, så är `HP`:s rank: 17 i antalet tokens.
  
  De 5 mest frekventa `HP` grundformer: `vad`, `vad för`, `vem`, `vad än`, `såväl som:1`
  
  De 5 mest frekventa `HP` tokens: `som`, `vad`, `vilket`, `Vad`, `Som`
  
  
  #### Ordklass: **HP**, särdrag
  
  ##### HP och Definite
  
  4 463 `HP` tokens (10% av alla `HP` tokens) har `Definite`.
  
  `HP` tokens har följande värden av `Definite`:
  
  - `Ind` (4 463; 10%)
  - `<saknas>` (40 259; 90%)
  
  ##### HP och Gender
  
  4 463 `HP` tokens (10% av alla `HP` tokens) har `Gender`.
  
  `HP` tokens har följande värden av `Gender`:
  
  - `Com,Neut` (205; < 1%)
  - `Com` (262; < 1%)
  - `Neut` (3 996; 9%)
  - `<saknas>` (40 259; 90%)
  
  ##### HP och Number
  
  4 463 `HP` tokens (10% av alla `HP` tokens) har `Number`.
  
  `HP` tokens har följande värden av `Number`:
  
  - `Plur` (205; < 1%)
  - `Sing` (4 258; 10%)
  - `<saknas>` (40 259; 90%)
  
  
  ### Ordklass: **HS**
  Det finns 186 (< 1%) `HS` tokens. Av 25 observerade ordklasser, så är `HS`:s rank: 25 i antalet tokens.
  
  De 2 mest frekventa `HS` grundformer: `vars`, `vem`
  
  De 3 mest frekventa `HS` tokens: `vars`, `vilkas`, `vems`
  
  
  #### Ordklass: **HS**, särdrag
  
  ##### HS och Definite
  
  186 `HS` tokens (100% av alla `HS` tokens) har `Definite`.
  
  `HS` tokens har följande värden av `Definite`:
  
  - `Def` (186; 100%)
  - `<saknas>` (0; 0%)
  
  
  ### Ordklass: **IE**
  Det finns 45 393 (2%) `IE` tokens. Av 25 observerade ordklasser, så är `IE`:s rank: 16 i antalet tokens.
  
  De 5 mest frekventa `IE` grundformer: `att`, `ha att göra:2`, `ha att göra:12`, `ha att göra:26`, `ha att göra:15`
  
  De 5 mest frekventa `IE` tokens: `att`, `Att`, `geno`, `at`, `–`
  
  
  #### Ordklass: **IE**, särdrag
  
  Hittade inga särdrag för IE
  
  ### Ordklass: **IN**
  Det finns 840 (< 1%) `IN` tokens. Av 25 observerade ordklasser, så är `IN`:s rank: 24 i antalet tokens.
  
  De 5 mest frekventa `IN` grundformer: `nej`, `ja`, `jo`, `tack`, `nä`
  
  De 5 mest frekventa `IN` tokens: `nej`, `ja`, `Nej`, `Ja`, `Tack`
  
  
  #### Ordklass: **IN**, särdrag
  
  Hittade inga särdrag för IN
  
  ### Ordklass: **JJ**
  Det finns 132 552 (5%) `JJ` tokens. Av 25 observerade ordklasser, så är `JJ`:s rank: 5 i antalet tokens.
  
  De 5 mest frekventa `JJ` grundformer: `ekonomisk`, `statlig`, `allmän`, `övrig`, `samtlig`
  
  De 5 mest frekventa `JJ` tokens: `ekonomiska`, `annan`, `allmänna`, `övriga`, `obligatorisk`
  
  
  #### Ordklass: **JJ**, särdrag
  
  ##### JJ och Abbr
  
  12 `JJ` tokens (< 1% av alla `JJ` tokens) har `Abbr`.
  
  `JJ` tokens har följande värden av `Abbr`:
  
  - `Ja (`Yes`)` (12; < 1%)
  - `<saknas>` (132 540; 100%)
  
  ##### JJ och Case
  
  132 538 `JJ` tokens (100% av alla `JJ` tokens) har `Case`.
  
  `JJ` tokens har följande värden av `Case`:
  
  - `Gen` (348; < 1%)
  - `Nom` (132 190; 100%)
  - `<saknas>` (14; < 1%)
  
  ##### JJ och Definite
  
  132 529 `JJ` tokens (100% av alla `JJ` tokens) har `Definite`.
  
  `JJ` tokens har följande värden av `Definite`:
  
  - `Def` (19 453; 15%)
  - `Ind` (54 397; 41%)
  - `Def,Ind` (58 679; 44%)
  - `<saknas>` (23; < 1%)
  
  ##### JJ och Degree
  
  132 541 `JJ` tokens (100% av alla `JJ` tokens) har `Degree`.
  
  `JJ` tokens har följande värden av `Degree`:
  
  - `Sup` (2 742; 2%)
  - `Cmp` (10 868; 8%)
  - `Pos` (118 931; 90%)
  - `<saknas>` (11; < 1%)
  
  ##### JJ och Gender
  
  132 540 `JJ` tokens (100% av alla `JJ` tokens) har `Gender`.
  
  `JJ` tokens har följande värden av `Gender`:
  
  - `Masc` (378; < 1%)
  - `Neut` (17 920; 14%)
  - `Com` (31 973; 24%)
  - `Com,Neut` (82 269; 62%)
  - `<saknas>` (12; < 1%)
  
  ##### JJ och Number
  
  132 536 `JJ` tokens (100% av alla `JJ` tokens) har `Number`.
  
  `JJ` tokens har följande värden av `Number`:
  
  - `Plur,Sing` (16 702; 13%)
  - `Plur` (48 694; 37%)
  - `Sing` (67 140; 51%)
  - `<saknas>` (16; < 1%)
  
  
  ### Ordklass: **KN**
  Det finns 117 972 (4%) `KN` tokens. Av 25 observerade ordklasser, så är `KN`:s rank: 8 i antalet tokens.
  
  De 5 mest frekventa `KN` grundformer: `och`, `eller`, `samt`, `men`, `både och`
  
  De 5 mest frekventa `KN` tokens: `och`, `eller`, `som`, `samt`, `men`
  
  
  #### Ordklass: **KN**, särdrag
  
  ##### KN och Abbr
  
  17 `KN` tokens (< 1% av alla `KN` tokens) har `Abbr`.
  
  `KN` tokens har följande värden av `Abbr`:
  
  - `Ja (`Yes`)` (17; < 1%)
  - `<saknas>` (117 955; 100%)
  
  
  ### Ordklass: **MAD**
  Det finns 131 026 (5%) `MAD` tokens. Av 25 observerade ordklasser, så är `MAD`:s rank: 6 i antalet tokens.
  
  De 5 mest frekventa `MAD` tokens: `.`, `:`, `!`, `?`, `–`
  
  
  #### Ordklass: **MAD**, särdrag
  
  Hittade inga särdrag för MAD
  
  ### Ordklass: **MID**
  Det finns 101 646 (4%) `MID` tokens. Av 25 observerade ordklasser, så är `MID`:s rank: 10 i antalet tokens.
  
  De 5 mest frekventa `MID` tokens: `,`, `/`, `:`, `-`, `–`
  
  
  #### Ordklass: **MID**, särdrag
  
  Hittade inga särdrag för MID
  
  ### Ordklass: **NN**
  Det finns 736 544 (25%) `NN` tokens. Av 25 observerade ordklasser, så är `NN`:s rank: 1 i antalet tokens.
  
  De 5 mest frekventa `NN` grundformer: `riksdag`, `anslag`, `s`, `utgiftsområde`, `utbildning`
  
  De 5 mest frekventa `NN` tokens: `riksdagen`, `utgiftsområde`, `s`, `anslag`, `enlighet`
  
  
  #### Ordklass: **NN**, särdrag
  
  ##### NN och Abbr
  
  35 393 `NN` tokens (5% av alla `NN` tokens) har `Abbr`.
  
  `NN` tokens har följande värden av `Abbr`:
  
  - `Ja (`Yes`)` (35 393; 5%)
  - `<saknas>` (701 151; 95%)
  
  ##### NN och Case
  
  695 434 `NN` tokens (94% av alla `NN` tokens) har `Case`.
  
  `NN` tokens har följande värden av `Case`:
  
  - `Gen` (33 556; 5%)
  - `Nom` (661 878; 90%)
  - `<saknas>` (41 110; 6%)
  
  ##### NN och Compound
  
  4 826 `NN` tokens (< 1% av alla `NN` tokens) har `Compound`.
  
  `NN` tokens har följande värden av `Compound`:
  
  - `Ja (`Yes`)` (4 826; < 1%)
  - `<saknas>` (731 718; 99%)
  
  ##### NN och Definite
  
  694 413 `NN` tokens (94% av alla `NN` tokens) har `Definite`.
  
  `NN` tokens har följande värden av `Definite`:
  
  - `Def` (246 895; 34%)
  - `Ind` (447 518; 61%)
  - `<saknas>` (42 131; 6%)
  
  ##### NN och Gender
  
  698 790 `NN` tokens (95% av alla `NN` tokens) har `Gender`.
  
  `NN` tokens har följande värden av `Gender`:
  
  - `Neut` (234 585; 32%)
  - `Com` (464 205; 63%)
  - `<saknas>` (37 754; 5%)
  
  ##### NN och Number
  
  694 905 `NN` tokens (94% av alla `NN` tokens) har `Number`.
  
  `NN` tokens har följande värden av `Number`:
  
  - `Plur` (188 599; 26%)
  - `Sing` (506 306; 69%)
  - `<saknas>` (41 639; 6%)
  
  
  ### Ordklass: **PAD**
  Det finns 93 999 (3%) `PAD` tokens. Av 25 observerade ordklasser, så är `PAD`:s rank: 13 i antalet tokens.
  
  De 5 mest frekventa `PAD` tokens: `)`, `(`, `"`, `]`, `[`
  
  
  #### Ordklass: **PAD**, särdrag
  
  Hittade inga särdrag för PAD
  
  ### Ordklass: **PC**
  Det finns 47 212 (2%) `PC` tokens. Av 25 observerade ordklasser, så är `PC`:s rank: 15 i antalet tokens.
  
  De 5 mest frekventa `PC` grundformer: `särskilja`, `särskild`, `stärka`, `behandla`, `föreslå`
  
  De 5 mest frekventa `PC` tokens: `följande`, `särskilda`, `särskild`, `stärkt`, `Särskilda`
  
  
  #### Ordklass: **PC**, särdrag
  
  ##### PC och Case
  
  47 212 `PC` tokens (100% av alla `PC` tokens) har `Case`.
  
  `PC` tokens har följande värden av `Case`:
  
  - `Gen` (30; < 1%)
  - `Nom` (47 182; 100%)
  - `<saknas>` (0; 0%)
  
  ##### PC och Definite
  
  47 212 `PC` tokens (100% av alla `PC` tokens) har `Definite`.
  
  `PC` tokens har följande värden av `Definite`:
  
  - `Def` (2 759; 6%)
  - `Ind` (15 356; 33%)
  - `Def,Ind` (29 097; 62%)
  - `<saknas>` (0; 0%)
  
  ##### PC och Gender
  
  47 212 `PC` tokens (100% av alla `PC` tokens) har `Gender`.
  
  `PC` tokens har följande värden av `Gender`:
  
  - `Masc` (62; < 1%)
  - `Neut` (5 647; 12%)
  - `Com` (9 709; 21%)
  - `Com,Neut` (31 794; 67%)
  - `<saknas>` (0; 0%)
  
  ##### PC och Number
  
  47 212 `PC` tokens (100% av alla `PC` tokens) har `Number`.
  
  `PC` tokens har följande värden av `Number`:
  
  - `Plur` (13 587; 29%)
  - `Plur,Sing` (15 494; 33%)
  - `Sing` (18 131; 38%)
  - `<saknas>` (0; 0%)
  
  ##### PC och Tense
  
  47 212 `PC` tokens (100% av alla `PC` tokens) har `Tense`.
  
  `PC` tokens har följande värden av `Tense`:
  
  - `Pres` (15 494; 33%)
  - `Past` (31 718; 67%)
  - `<saknas>` (0; 0%)
  
  ##### PC och VerbForm
  
  47 212 `PC` tokens (100% av alla `PC` tokens) har `VerbForm`.
  
  `PC` tokens har följande värden av `VerbForm`:
  
  - `Part` (47 212; 100%)
  - `<saknas>` (0; 0%)
  
  
  ### Ordklass: **PL**
  Det finns 15 486 (< 1%) `PL` tokens. Av 25 observerade ordklasser, så är `PL`:s rank: 18 i antalet tokens.
  
  De 5 mest frekventa `PL` grundformer: `fram`, `upp`, `ut`, `in`, `om`
  
  De 5 mest frekventa `PL` tokens: `följande`, `särskilda`, `särskild`, `stärkt`, `Särskilda`
  
  
  #### Ordklass: **PL**, särdrag
  
  Hittade inga särdrag för PL
  
  ### Ordklass: **PM**
  Det finns 106 015 (4%) `PM` tokens. Av 25 observerade ordklasser, så är `PM`:s rank: 9 i antalet tokens.
  
  De 5 mest frekventa `PM` grundformer: `Jonas`, `Fredrik`, `Stockholm`, `Roger`, `Ebba`
  
  De 5 mest frekventa `PM` tokens: `SD`, `KD`, `MP`, `Ebba`, `Erik`
  
  
  #### Ordklass: **PM**, särdrag
  
  ##### PM och Case
  
  106 006 `PM` tokens (100% av alla `PM` tokens) har `Case`.
  
  `PM` tokens har följande värden av `Case`:
  
  - `Gen` (3 206; 3%)
  - `Nom` (102 800; 97%)
  - `<saknas>` (9; < 1%)
  
  ##### PM och Compound
  
  10 `PM` tokens (< 1% av alla `PM` tokens) har `Compound`.
  
  `PM` tokens har följande värden av `Compound`:
  
  - `Ja (`Yes`)` (10; < 1%)
  - `<saknas>` (106 005; 100%)
  
  
  ### Ordklass: **PN**
  Det finns 98 041 (3%) `PN` tokens. Av 25 observerade ordklasser, så är `PN`:s rank: 12 i antalet tokens.
  
  De 5 mest frekventa `PN` grundformer: `den`, `sig`, `denna`, `ställa sig:2`, `man`
  
  De 5 mest frekventa `PN` tokens: `det`, `sig`, `detta`, `Det`, `de`
  
  
  #### Ordklass: **PN**, särdrag
  
  ##### PN och Case
  
  98 041 `PN` tokens (100% av alla `PN` tokens) har `Case`.
  
  `PN` tokens har följande värden av `Case`:
  
  - `Acc` (14 305; 15%)
  - `Nom` (27 692; 28%)
  - `Acc,Nom` (56 044; 57%)
  - `<saknas>` (0; 0%)
  
  ##### PN och Definite
  
  98 041 `PN` tokens (100% av alla `PN` tokens) har `Definite`.
  
  `PN` tokens har följande värden av `Definite`:
  
  - `Ind` (11 172; 11%)
  - `Def` (86 869; 89%)
  - `<saknas>` (0; 0%)
  
  ##### PN och Gender
  
  98 041 `PN` tokens (100% av alla `PN` tokens) har `Gender`.
  
  `PN` tokens har följande värden av `Gender`:
  
  - `Masc` (31; < 1%)
  - `Com,Neut` (19 321; 20%)
  - `Com` (30 928; 32%)
  - `Neut` (47 761; 49%)
  - `<saknas>` (0; 0%)
  
  ##### PN och Number
  
  98 041 `PN` tokens (100% av alla `PN` tokens) har `Number`.
  
  `PN` tokens har följande värden av `Number`:
  
  - `Plur,Sing` (11 049; 11%)
  - `Plur` (21 168; 22%)
  - `Sing` (65 824; 67%)
  - `<saknas>` (0; 0%)
  
  
  ### Ordklass: **PP**
  Det finns 358 848 (12%) `PP` tokens. Av 25 observerade ordklasser, så är `PP`:s rank: 3 i antalet tokens.
  
  De 5 mest frekventa `PP` grundformer: `i`, `för`, `av`, `till`, `om`
  
  De 5 mest frekventa `PP` tokens: `i`, `för`, `av`, `till`, `om`
  
  
  #### Ordklass: **PP**, särdrag
  
  ##### PP och Abbr
  
  5 `PP` tokens (< 1% av alla `PP` tokens) har `Abbr`.
  
  `PP` tokens har följande värden av `Abbr`:
  
  - `Ja (`Yes`)` (5; < 1%)
  - `<saknas>` (358 843; 100%)
  
  
  ### Ordklass: **PS**
  Det finns 9 633 (< 1%) `PS` tokens. Av 25 observerade ordklasser, så är `PS`:s rank: 20 i antalet tokens.
  
  De 5 mest frekventa `PS` grundformer: `sig`, `vi`, `jag`, `de`, `den`
  
  De 5 mest frekventa `PS` tokens: `sin`, `sitt`, `sina`, `vår`, `vårt`
  
  
  #### Ordklass: **PS**, särdrag
  
  ##### PS och Definite
  
  9 633 `PS` tokens (100% av alla `PS` tokens) har `Definite`.
  
  `PS` tokens har följande värden av `Definite`:
  
  - `Def` (9 633; 100%)
  - `<saknas>` (0; 0%)
  
  ##### PS och Gender
  
  9 633 `PS` tokens (100% av alla `PS` tokens) har `Gender`.
  
  `PS` tokens har följande värden av `Gender`:
  
  - `Neut` (2 345; 24%)
  - `Com,Neut` (3 393; 35%)
  - `Com` (3 895; 40%)
  - `<saknas>` (0; 0%)
  
  ##### PS och Number
  
  9 633 `PS` tokens (100% av alla `PS` tokens) har `Number`.
  
  `PS` tokens har följande värden av `Number`:
  
  - `Plur,Sing` (1 417; 15%)
  - `Plur` (1 976; 21%)
  - `Sing` (6 240; 65%)
  - `<saknas>` (0; 0%)
  
  
  ### Ordklass: **RG**
  Det finns 180 321 (6%) `RG` tokens. Av 25 observerade ordklasser, så är `RG`:s rank: 4 i antalet tokens.
  
  De 5 mest frekventa `RG` grundformer: `V`, `två`, `tre`, `fyra`, `sex`
  
  De 5 mest frekventa `RG` tokens: `2018`, `2019`, `1`, `2`, `8`
  
  
  #### Ordklass: **RG**, särdrag
  
  ##### RG och Case
  
  180 310 `RG` tokens (100% av alla `RG` tokens) har `Case`.
  
  `RG` tokens har följande värden av `Case`:
  
  - `Nom` (180 310; 100%)
  - `<saknas>` (11; < 1%)
  
  ##### RG och Compound
  
  11 `RG` tokens (< 1% av alla `RG` tokens) har `Compound`.
  
  `RG` tokens har följande värden av `Compound`:
  
  - `Ja (`Yes`)` (11; < 1%)
  - `<saknas>` (180 310; 100%)
  
  
  ### Ordklass: **RO**
  Det finns 2 897 (< 1%) `RO` tokens. Av 25 observerade ordklasser, så är `RO`:s rank: 21 i antalet tokens.
  
  De 5 mest frekventa `RO` grundformer: `fyra`, `första gången`, `i första hand:4`, `i första hand:8`, `i första hand:5`
  
  De 5 mest frekventa `RO` tokens: `första`, `1`, `andra`, `tredje`, `12`
  
  
  #### Ordklass: **RO**, särdrag
  
  ##### RO och Case
  
  2 897 `RO` tokens (100% av alla `RO` tokens) har `Case`.
  
  `RO` tokens har följande värden av `Case`:
  
  - `Nom` (2 897; 100%)
  - `<saknas>` (0; 0%)
  
  ##### RO och Definite
  
  5 `RO` tokens (< 1% av alla `RO` tokens) har `Definite`.
  
  `RO` tokens har följande värden av `Definite`:
  
  - `Def,Ind` (5; < 1%)
  - `<saknas>` (2 892; 100%)
  
  ##### RO och Gender
  
  5 `RO` tokens (< 1% av alla `RO` tokens) har `Gender`.
  
  `RO` tokens har följande värden av `Gender`:
  
  - `Masc` (5; < 1%)
  - `<saknas>` (2 892; 100%)
  
  ##### RO och Number
  
  5 `RO` tokens (< 1% av alla `RO` tokens) har `Number`.
  
  `RO` tokens har följande värden av `Number`:
  
  - `Sing` (5; < 1%)
  - `<saknas>` (2 892; 100%)
  
  
  ### Ordklass: **SN**
  Det finns 53 560 (2%) `SN` tokens. Av 25 observerade ordklasser, så är `SN`:s rank: 14 i antalet tokens.
  
  De 5 mest frekventa `SN` grundformer: `att`, `om`, `eftersom`, `innan`, `medan`
  
  De 5 mest frekventa `SN` tokens: `att`, `om`, `Om`, `eftersom`, `Att`
  
  
  #### Ordklass: **SN**, särdrag
  
  Hittade inga särdrag för SN
  
  ### Ordklass: **UO**
  Det finns 2 274 (< 1%) `UO` tokens. Av 25 observerade ordklasser, så är `UO`:s rank: 22 i antalet tokens.
  
  De 5 mest frekventa `UO` grundformer: `public service`, `au pair`, `à la:16`, `à la`, `vice versa:27`
  
  De 5 mest frekventa `UO` tokens: `et`, `na`, `örslag`, `S`, `kolverk`
  
  
  #### Ordklass: **UO**, särdrag
  
  Hittade inga särdrag för UO
  
  ### Ordklass: **VB**
  Det finns 380 285 (13%) `VB` tokens. Av 25 observerade ordklasser, så är `VB`:s rank: 2 i antalet tokens.
  
  De 5 mest frekventa `VB` grundformer: `vara`, `böra`, `föreslå`, `lägga`, `avstyrka`
  
  De 5 mest frekventa `VB` tokens: `är`, `bör`, `föreslår`, `avstyrker`, `anvisar`
  
  
  #### Ordklass: **VB**, särdrag
  
  ##### VB och Abbr
  
  18 `VB` tokens (< 1% av alla `VB` tokens) har `Abbr`.
  
  `VB` tokens har följande värden av `Abbr`:
  
  - `Ja (`Yes`)` (18; < 1%)
  - `<saknas>` (380 267; 100%)
  
  ##### VB och Mood
  
  244 612 `VB` tokens (64% av alla `VB` tokens) har `Mood`.
  
  `VB` tokens har följande värden av `Mood`:
  
  - `Sub` (161; < 1%)
  - `Imp` (1 616; < 1%)
  - `Ind` (242 835; 64%)
  - `<saknas>` (135 673; 36%)
  
  ##### VB och Tense
  
  242 920 `VB` tokens (64% av alla `VB` tokens) har `Tense`.
  
  `VB` tokens har följande värden av `Tense`:
  
  - `Past` (22 610; 6%)
  - `Pres` (220 310; 58%)
  - `<saknas>` (137 365; 36%)
  
  ##### VB och VerbForm
  
  380 261 `VB` tokens (100% av alla `VB` tokens) har `VerbForm`.
  
  `VB` tokens har följande värden av `VerbForm`:
  
  - `Sup` (20 211; 5%)
  - `Inf` (115 019; 30%)
  - `Fin` (245 031; 64%)
  - `<saknas>` (24; < 1%)
  
  ##### VB och Voice
  
  380 257 `VB` tokens (100% av alla `VB` tokens) har `Voice`.
  
  `VB` tokens har följande värden av `Voice`:
  
  - `Pass` (64 399; 17%)
  - `Act` (315 858; 83%)
  - `<saknas>` (28; < 1%)
  
  
  '''
# ---
# name: test_write_statistical_overview[en]
  '''
  ## Overview
  
  Feature | Number | Mean | Standard deviation
  --- | ---: | ---: | ---:
  number of files (`file`) | 2 | | 
  file length, in characters (`file`) | 17,940,923 | 8,970,462 | 254,556
  number of texts (`text`) | 4,063 | | 
  text length, in characters (`text`) | 17,928,556 | 4,413 | 31,685
  number of documents (`dokument`) | 87 | | 
  document length, in characters (`dokument`) | 17,940,832 | 206,216 | 148,654
  number of paragraphs (`segment.paragraph`) | 115,542 | | 
  paragraph length, in characters (`segment.paragraph`) | 17,309,621 | 150 | 240
  number of sentences (`segment.sentence`) | 194,785 | | 
  sentence length, in characters (`segment.sentence`) | 17,228,487 | 88.4 | 81.5
  sentence length, in words (`segment.sentence`) | 2,558,418 | 13.1 | 12.0
  number of tokens (`segment.token`) | 2,896,932 | | 
  token length, in characters (`segment.token`) | 14,864,325 | 5.13 | 3.99
  READABILITY | ---: | ---: | ---:
  LIX value (`text:readability.lix`) | - | 56.5 | 28.4
  OVIX value (`text:readability.ovix`) | - | 59.2 | 25.2
  NK value (`text:readability.nk`) | - | 2.18 | 1.71
  
  '''
# ---
# name: test_write_statistical_overview[sv]
  '''
  ## Översikt
  
  Egenskap | Värde | Medelvärde | Standardavvikelse
  --- | ---: | ---: | ---:
  antal filer (`file`) | 2 | | 
  fillängd, i tecken (`file`) | 17 940 923 | 8 970 462 | 254 556
  antal texter (`text`) | 4 063 | | 
  textlängd, i tecken (`text`) | 17 928 556 | 4 413 | 31 685
  antal dokument (`dokument`) | 87 | | 
  dokumentlängd, i tecken (`dokument`) | 17 940 832 | 206 216 | 148 654
  antal stycken (`segment.paragraph`) | 115 542 | | 
  styckeslängd, i tecken (`segment.paragraph`) | 17 309 621 | 150 | 240
  antal meningar (`segment.sentence`) | 194 785 | | 
  meningslängd, i tecken (`segment.sentence`) | 17 228 487 | 88,4 | 81,5
  meningslängd, i ord (`segment.sentence`) | 2 558 418 | 13,1 | 12,0
  antal tokens (`segment.token`) | 2 896 932 | | 
  tokenlängd, i tecken (`segment.token`) | 14 864 325 | 5,13 | 3,99
  LÄSBARHET | ---: | ---: | ---:
  LIX värde (`text:readability.lix`) | - | 56,5 | 28,4
  OVIX värde (`text:readability.ovix`) | - | 59,2 | 25,2
  NK värde (`text:readability.nk`) | - | 2,18 | 1,71
  
  '''
# ---
# name: test_write_suc_features[en]
  '''
  ## Features
  
  This corpus contains the following features:
  
  [Abbreviation](#features-abbreviation) - [Case](#features-case) - [Definiteness](#features-definiteness) - [Degree](#features-degree) - [Delimiter](#features-delimiter) - [Gender](#features-gender) - [Mood](#features-mood) - [Number](#features-number) - [Particle Form](#features-particle-form) - [Pronoun Form](#features-pronoun-form) - [Tense](#features-tense) - [Voice](#features-voice)
  
  ### Features: **Abbreviation**
  <details>
  <summary>
  <code>Abbreviation</code> occurs with 1 value: <code>AN</code>.
  
  </summary>
  
  59,873 tokens (1%) have a non-empty value of <code>Abbreviation</code>.
   The feature is used with 6 part-of-speech tags:
  <table>
  <thead>
  <tr>
  <th>Part of Speech</th>
  <th align="right">Count</th>
  <th align="right">Percentage</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>NN</code></td>
  <td align="right">37,351</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>AB</code></td>
  <td align="right">22,440</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>VB</code></td>
  <td align="right">28</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>KN</code></td>
  <td align="right">24</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>JJ</code></td>
  <td align="right">20</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>PP</code></td>
  <td align="right">10</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <td>Σ</td>
  <td align="right">59,873</td>
  <td align="right">1%</td>
  </tbody>
  </table>
  
  </details>
  
  
  ### Features: **Case**
  <details>
  <summary>
  <code>Case</code> occurs with 3 different values: <code>GEN</code>, <code>NOM</code>, <code>SMS</code>.
  
  </summary>
  
  1,167,765 tokens (20%) have a non-empty value of <code>Case</code>.
   The feature is used with 6 part-of-speech tags:
  <table>
  <thead>
  <tr>
  <th>Part of Speech</th>
  <th align="right">Count</th>
  <th align="right">Percentage</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>NN</code></td>
  <td align="right">698,788</td>
  <td align="right">12%</td>
  </tr>
  <tr>
  <td><code>RG</code></td>
  <td align="right">180,321</td>
  <td align="right">3%</td>
  </tr>
  <tr>
  <td><code>JJ</code></td>
  <td align="right">132,532</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>PM</code></td>
  <td align="right">106,015</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>PC</code></td>
  <td align="right">47,212</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>RO</code></td>
  <td align="right">2,897</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <td>Σ</td>
  <td align="right">1,167,765</td>
  <td align="right">20%</td>
  </tbody>
  </table>
  
  </details>
  
  
  ### Features: **Definiteness**
  <details>
  <summary>
  <code>Definiteness</code> occurs with 2 different values: <code>DEF</code>, <code>IND</code>.
  
  </summary>
  
  1,089,053 tokens (18%) have a non-empty value of <code>Definiteness</code>.
   The feature is used with 10 part-of-speech tags:
  <table>
  <thead>
  <tr>
  <th>Part of Speech</th>
  <th align="right">Count</th>
  <th align="right">Percentage</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>NN</code></td>
  <td align="right">693,943</td>
  <td align="right">12%</td>
  </tr>
  <tr>
  <td><code>JJ</code></td>
  <td align="right">132,532</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>DT</code></td>
  <td align="right">101,631</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>PN</code></td>
  <td align="right">98,041</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>PC</code></td>
  <td align="right">47,212</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>PS</code></td>
  <td align="right">9,633</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>HP</code></td>
  <td align="right">4,463</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>HD</code></td>
  <td align="right">1,407</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>HS</code></td>
  <td align="right">186</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>RO</code></td>
  <td align="right">5</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <td>Σ</td>
  <td align="right">1,089,053</td>
  <td align="right">18%</td>
  </tbody>
  </table>
  
   90,405 tokens (8%) have multiple values of `Definiteness`.
  
  </details>
  
  
  ### Features: **Degree**
  <details>
  <summary>
  <code>Degree</code> occurs with 3 different values: <code>KOM</code>, <code>POS</code>, <code>SUV</code>.
  
  </summary>
  
  160,860 tokens (3%) have a non-empty value of <code>Degree</code>.
   The feature is used with 2 part-of-speech tags:
  <table>
  <thead>
  <tr>
  <th>Part of Speech</th>
  <th align="right">Count</th>
  <th align="right">Percentage</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>JJ</code></td>
  <td align="right">132,532</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>AB</code></td>
  <td align="right">28,328</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <td>Σ</td>
  <td align="right">160,860</td>
  <td align="right">3%</td>
  </tbody>
  </table>
  
  </details>
  
  
  ### Features: **Delimiter**
  <details>
  <summary>
  <code>Delimiter</code> occurs with 3 different values: <code>MAD</code>, <code>MID</code>, <code>PAD</code>.
  
  </summary>
  
  326,671 tokens (6%) have a non-empty value of <code>Delimiter</code>.
   The feature is used with 1 part-of-speech tags:
  <table>
  <thead>
  <tr>
  <th>Part of Speech</th>
  <th align="right">Count</th>
  <th align="right">Percentage</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>Delimiter</code></td>
  <td align="right">326,671</td>
  <td align="right">6%</td>
  </tr>
  </tbody>
  </table>
  
  </details>
  
  
  ### Features: **Gender**
  <details>
  <summary>
  <code>Gender</code> occurs with 3 different values: <code>MAS</code>, <code>NEU</code>, <code>UTR</code>.
  
  </summary>
  
  1,093,911 tokens (19%) have a non-empty value of <code>Gender</code>.
   The feature is used with 9 part-of-speech tags:
  <table>
  <thead>
  <tr>
  <th>Part of Speech</th>
  <th align="right">Count</th>
  <th align="right">Percentage</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>NN</code></td>
  <td align="right">698,987</td>
  <td align="right">12%</td>
  </tr>
  <tr>
  <td><code>JJ</code></td>
  <td align="right">132,532</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>DT</code></td>
  <td align="right">101,631</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>PN</code></td>
  <td align="right">98,041</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>PC</code></td>
  <td align="right">47,212</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>PS</code></td>
  <td align="right">9,633</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>HP</code></td>
  <td align="right">4,463</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>HD</code></td>
  <td align="right">1,407</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>RO</code></td>
  <td align="right">5</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <td>Σ</td>
  <td align="right">1,093,911</td>
  <td align="right">19%</td>
  </tbody>
  </table>
  
   157,285 tokens (14%) have multiple values of `Gender`.
  
  </details>
  
  
  ### Features: **Mood**
  <details>
  <summary>
  <code>Mood</code> occurs with 1 value: <code>KON</code>.
  
  </summary>
  
  162 tokens (0%) have a non-empty value of <code>Mood</code>.
   The feature is used with 1 part-of-speech tags:
  <table>
  <thead>
  <tr>
  <th>Part of Speech</th>
  <th align="right">Count</th>
  <th align="right">Percentage</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>VB</code></td>
  <td align="right">162</td>
  <td align="right">&lt; 1%</td>
  </tr>
  </tbody>
  </table>
  
  </details>
  
  
  ### Features: **Number**
  <details>
  <summary>
  <code>Number</code> occurs with 2 different values: <code>PLU</code>, <code>SIN</code>.
  
  </summary>
  
  1,088,867 tokens (18%) have a non-empty value of <code>Number</code>.
   The feature is used with 9 part-of-speech tags:
  <table>
  <thead>
  <tr>
  <th>Part of Speech</th>
  <th align="right">Count</th>
  <th align="right">Percentage</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>NN</code></td>
  <td align="right">693,943</td>
  <td align="right">12%</td>
  </tr>
  <tr>
  <td><code>JJ</code></td>
  <td align="right">132,532</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>DT</code></td>
  <td align="right">101,631</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>PN</code></td>
  <td align="right">98,041</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>PC</code></td>
  <td align="right">47,212</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>PS</code></td>
  <td align="right">9,633</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>HP</code></td>
  <td align="right">4,463</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>HD</code></td>
  <td align="right">1,407</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>RO</code></td>
  <td align="right">5</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <td>Σ</td>
  <td align="right">1,088,867</td>
  <td align="right">18%</td>
  </tbody>
  </table>
  
   45,832 tokens (4%) have multiple values of `Number`.
  
  </details>
  
  
  ### Features: **Particle Form**
  <details>
  <summary>
  <code>Particle Form</code> occurs with 2 different values: <code>PRF</code>, <code>PRS</code>.
  
  </summary>
  
  47,212 tokens (1%) have a non-empty value of <code>Particle Form</code>.
   The feature is used with 1 part-of-speech tags:
  <table>
  <thead>
  <tr>
  <th>Part of Speech</th>
  <th align="right">Count</th>
  <th align="right">Percentage</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>PC</code></td>
  <td align="right">47,212</td>
  <td align="right">&lt; 1%</td>
  </tr>
  </tbody>
  </table>
  
  </details>
  
  
  ### Features: **Pronoun Form**
  <details>
  <summary>
  <code>Pronoun Form</code> occurs with 2 different values: <code>OBJ</code>, <code>SUB</code>.
  
  </summary>
  
  98,041 tokens (2%) have a non-empty value of <code>Pronoun Form</code>.
   The feature is used with 1 part-of-speech tags:
  <table>
  <thead>
  <tr>
  <th>Part of Speech</th>
  <th align="right">Count</th>
  <th align="right">Percentage</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>PN</code></td>
  <td align="right">98,041</td>
  <td align="right">2%</td>
  </tr>
  </tbody>
  </table>
  
   56,045 tokens (57%) have multiple values of `Pronoun Form`.
  
  </details>
  
  
  ### Features: **Tense**
  <details>
  <summary>
  <code>Tense</code> occurs with 5 different values: <code>IMP</code>, <code>INF</code>, <code>PRS</code>, <code>PRT</code>, <code>SUP</code>.
  
  </summary>
  
  380,257 tokens (6%) have a non-empty value of <code>Tense</code>.
   The feature is used with 1 part-of-speech tags:
  <table>
  <thead>
  <tr>
  <th>Part of Speech</th>
  <th align="right">Count</th>
  <th align="right">Percentage</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>VB</code></td>
  <td align="right">380,257</td>
  <td align="right">6%</td>
  </tr>
  </tbody>
  </table>
  
  </details>
  
  
  ### Features: **Voice**
  <details>
  <summary>
  <code>Voice</code> occurs with 2 different values: <code>AKT</code>, <code>SFO</code>.
  
  </summary>
  
  380,257 tokens (6%) have a non-empty value of <code>Voice</code>.
   The feature is used with 1 part-of-speech tags:
  <table>
  <thead>
  <tr>
  <th>Part of Speech</th>
  <th align="right">Count</th>
  <th align="right">Percentage</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>VB</code></td>
  <td align="right">380,257</td>
  <td align="right">6%</td>
  </tr>
  </tbody>
  </table>
  
  </details>
  
  
  
  '''
# ---
# name: test_write_suc_features[sv]
  '''
  ## Särdrag
  
  Denna korpus innehåller följande särdrag:
  
  [Bestämdhet](#särdrag-bestämdhet) - [Diates](#särdrag-diates) - [Förkortning](#särdrag-förkortning) - [Genus](#särdrag-genus) - [Interpunktion](#särdrag-interpunktion) - [Kasus](#särdrag-kasus) - [Komparation](#särdrag-komparation) - [Modus](#särdrag-modus) - [Numerus](#särdrag-numerus) - [Partikelform](#särdrag-partikelform) - [Pronomform](#särdrag-pronomform) - [Tempus](#särdrag-tempus)
  
  ### Särdrag: **Bestämdhet**
  <details>
  <summary>
  <code>Bestämdhet</code> förekommer med 2 olika värden: <code>DEF</code>, <code>IND</code>.
  
  </summary>
  
  1 089 053 tokens (18%) har ett icke-tomt värde av <code>Bestämdhet</code>.
   Detta särdrag är använt tillsammans med 10 ordklasser:
  <table>
  <thead>
  <tr>
  <th>Ordklass</th>
  <th align="right">Antal</th>
  <th align="right">Procentandel</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>NN</code></td>
  <td align="right">693 943</td>
  <td align="right">12%</td>
  </tr>
  <tr>
  <td><code>JJ</code></td>
  <td align="right">132 532</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>DT</code></td>
  <td align="right">101 631</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>PN</code></td>
  <td align="right">98 041</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>PC</code></td>
  <td align="right">47 212</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>PS</code></td>
  <td align="right">9 633</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>HP</code></td>
  <td align="right">4 463</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>HD</code></td>
  <td align="right">1 407</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>HS</code></td>
  <td align="right">186</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>RO</code></td>
  <td align="right">5</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <td>Σ</td>
  <td align="right">1 089 053</td>
  <td align="right">18%</td>
  </tbody>
  </table>
  
   90 405 tokens (8%) har multipla värden av <code>Bestämdhet</code>.
  
  </details>
  
  
  ### Särdrag: **Diates**
  <details>
  <summary>
  <code>Diates</code> förekommer med 2 olika värden: <code>AKT</code>, <code>SFO</code>.
  
  </summary>
  
  380 257 tokens (6%) har ett icke-tomt värde av <code>Diates</code>.
   Detta särdrag är använt tillsammans med 1 ordklasser:
  <table>
  <thead>
  <tr>
  <th>Ordklass</th>
  <th align="right">Antal</th>
  <th align="right">Procentandel</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>VB</code></td>
  <td align="right">380 257</td>
  <td align="right">6%</td>
  </tr>
  </tbody>
  </table>
  
  </details>
  
  
  ### Särdrag: **Förkortning**
  <details>
  <summary>
  <code>Förkortning</code> förekommer med 1 värde: <code>AN</code>.
  
  </summary>
  
  59 873 tokens (1%) har ett icke-tomt värde av <code>Förkortning</code>.
   Detta särdrag är använt tillsammans med 6 ordklasser:
  <table>
  <thead>
  <tr>
  <th>Ordklass</th>
  <th align="right">Antal</th>
  <th align="right">Procentandel</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>NN</code></td>
  <td align="right">37 351</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>AB</code></td>
  <td align="right">22 440</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>VB</code></td>
  <td align="right">28</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>KN</code></td>
  <td align="right">24</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>JJ</code></td>
  <td align="right">20</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>PP</code></td>
  <td align="right">10</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <td>Σ</td>
  <td align="right">59 873</td>
  <td align="right">1%</td>
  </tbody>
  </table>
  
  </details>
  
  
  ### Särdrag: **Genus**
  <details>
  <summary>
  <code>Genus</code> förekommer med 3 olika värden: <code>MAS</code>, <code>NEU</code>, <code>UTR</code>.
  
  </summary>
  
  1 093 911 tokens (19%) har ett icke-tomt värde av <code>Genus</code>.
   Detta särdrag är använt tillsammans med 9 ordklasser:
  <table>
  <thead>
  <tr>
  <th>Ordklass</th>
  <th align="right">Antal</th>
  <th align="right">Procentandel</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>NN</code></td>
  <td align="right">698 987</td>
  <td align="right">12%</td>
  </tr>
  <tr>
  <td><code>JJ</code></td>
  <td align="right">132 532</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>DT</code></td>
  <td align="right">101 631</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>PN</code></td>
  <td align="right">98 041</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>PC</code></td>
  <td align="right">47 212</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>PS</code></td>
  <td align="right">9 633</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>HP</code></td>
  <td align="right">4 463</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>HD</code></td>
  <td align="right">1 407</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>RO</code></td>
  <td align="right">5</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <td>Σ</td>
  <td align="right">1 093 911</td>
  <td align="right">19%</td>
  </tbody>
  </table>
  
   157 285 tokens (14%) har multipla värden av <code>Genus</code>.
  
  </details>
  
  
  ### Särdrag: **Interpunktion**
  <details>
  <summary>
  <code>Interpunktion</code> förekommer med 3 olika värden: <code>MAD</code>, <code>MID</code>, <code>PAD</code>.
  
  </summary>
  
  326 671 tokens (6%) har ett icke-tomt värde av <code>Interpunktion</code>.
   Detta särdrag är använt tillsammans med 1 ordklasser:
  <table>
  <thead>
  <tr>
  <th>Ordklass</th>
  <th align="right">Antal</th>
  <th align="right">Procentandel</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>Delimiter</code></td>
  <td align="right">326 671</td>
  <td align="right">6%</td>
  </tr>
  </tbody>
  </table>
  
  </details>
  
  
  ### Särdrag: **Kasus**
  <details>
  <summary>
  <code>Kasus</code> förekommer med 3 olika värden: <code>GEN</code>, <code>NOM</code>, <code>SMS</code>.
  
  </summary>
  
  1 167 765 tokens (20%) har ett icke-tomt värde av <code>Kasus</code>.
   Detta särdrag är använt tillsammans med 6 ordklasser:
  <table>
  <thead>
  <tr>
  <th>Ordklass</th>
  <th align="right">Antal</th>
  <th align="right">Procentandel</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>NN</code></td>
  <td align="right">698 788</td>
  <td align="right">12%</td>
  </tr>
  <tr>
  <td><code>RG</code></td>
  <td align="right">180 321</td>
  <td align="right">3%</td>
  </tr>
  <tr>
  <td><code>JJ</code></td>
  <td align="right">132 532</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>PM</code></td>
  <td align="right">106 015</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>PC</code></td>
  <td align="right">47 212</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>RO</code></td>
  <td align="right">2 897</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <td>Σ</td>
  <td align="right">1 167 765</td>
  <td align="right">20%</td>
  </tbody>
  </table>
  
  </details>
  
  
  ### Särdrag: **Komparation**
  <details>
  <summary>
  <code>Komparation</code> förekommer med 3 olika värden: <code>KOM</code>, <code>POS</code>, <code>SUV</code>.
  
  </summary>
  
  160 860 tokens (3%) har ett icke-tomt värde av <code>Komparation</code>.
   Detta särdrag är använt tillsammans med 2 ordklasser:
  <table>
  <thead>
  <tr>
  <th>Ordklass</th>
  <th align="right">Antal</th>
  <th align="right">Procentandel</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>JJ</code></td>
  <td align="right">132 532</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>AB</code></td>
  <td align="right">28 328</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <td>Σ</td>
  <td align="right">160 860</td>
  <td align="right">3%</td>
  </tbody>
  </table>
  
  </details>
  
  
  ### Särdrag: **Modus**
  <details>
  <summary>
  <code>Modus</code> förekommer med 1 värde: <code>KON</code>.
  
  </summary>
  
  162 tokens (0%) har ett icke-tomt värde av <code>Modus</code>.
   Detta särdrag är använt tillsammans med 1 ordklasser:
  <table>
  <thead>
  <tr>
  <th>Ordklass</th>
  <th align="right">Antal</th>
  <th align="right">Procentandel</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>VB</code></td>
  <td align="right">162</td>
  <td align="right">&lt; 1%</td>
  </tr>
  </tbody>
  </table>
  
  </details>
  
  
  ### Särdrag: **Numerus**
  <details>
  <summary>
  <code>Numerus</code> förekommer med 2 olika värden: <code>PLU</code>, <code>SIN</code>.
  
  </summary>
  
  1 088 867 tokens (18%) har ett icke-tomt värde av <code>Numerus</code>.
   Detta särdrag är använt tillsammans med 9 ordklasser:
  <table>
  <thead>
  <tr>
  <th>Ordklass</th>
  <th align="right">Antal</th>
  <th align="right">Procentandel</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>NN</code></td>
  <td align="right">693 943</td>
  <td align="right">12%</td>
  </tr>
  <tr>
  <td><code>JJ</code></td>
  <td align="right">132 532</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>DT</code></td>
  <td align="right">101 631</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>PN</code></td>
  <td align="right">98 041</td>
  <td align="right">2%</td>
  </tr>
  <tr>
  <td><code>PC</code></td>
  <td align="right">47 212</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>PS</code></td>
  <td align="right">9 633</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>HP</code></td>
  <td align="right">4 463</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>HD</code></td>
  <td align="right">1 407</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <tr>
  <td><code>RO</code></td>
  <td align="right">5</td>
  <td align="right">&lt; 1%</td>
  </tr>
  <td>Σ</td>
  <td align="right">1 088 867</td>
  <td align="right">18%</td>
  </tbody>
  </table>
  
   45 832 tokens (4%) har multipla värden av <code>Numerus</code>.
  
  </details>
  
  
  ### Särdrag: **Partikelform**
  <details>
  <summary>
  <code>Partikelform</code> förekommer med 2 olika värden: <code>PRF</code>, <code>PRS</code>.
  
  </summary>
  
  47 212 tokens (1%) har ett icke-tomt värde av <code>Partikelform</code>.
   Detta särdrag är använt tillsammans med 1 ordklasser:
  <table>
  <thead>
  <tr>
  <th>Ordklass</th>
  <th align="right">Antal</th>
  <th align="right">Procentandel</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>PC</code></td>
  <td align="right">47 212</td>
  <td align="right">&lt; 1%</td>
  </tr>
  </tbody>
  </table>
  
  </details>
  
  
  ### Särdrag: **Pronomform**
  <details>
  <summary>
  <code>Pronomform</code> förekommer med 2 olika värden: <code>OBJ</code>, <code>SUB</code>.
  
  </summary>
  
  98 041 tokens (2%) har ett icke-tomt värde av <code>Pronomform</code>.
   Detta särdrag är använt tillsammans med 1 ordklasser:
  <table>
  <thead>
  <tr>
  <th>Ordklass</th>
  <th align="right">Antal</th>
  <th align="right">Procentandel</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>PN</code></td>
  <td align="right">98 041</td>
  <td align="right">2%</td>
  </tr>
  </tbody>
  </table>
  
   56 045 tokens (57%) har multipla värden av <code>Pronomform</code>.
  
  </details>
  
  
  ### Särdrag: **Tempus**
  <details>
  <summary>
  <code>Tempus</code> förekommer med 5 olika värden: <code>IMP</code>, <code>INF</code>, <code>PRS</code>, <code>PRT</code>, <code>SUP</code>.
  
  </summary>
  
  380 257 tokens (6%) har ett icke-tomt värde av <code>Tempus</code>.
   Detta särdrag är använt tillsammans med 1 ordklasser:
  <table>
  <thead>
  <tr>
  <th>Ordklass</th>
  <th align="right">Antal</th>
  <th align="right">Procentandel</th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td><code>VB</code></td>
  <td align="right">380 257</td>
  <td align="right">6%</td>
  </tr>
  </tbody>
  </table>
  
  </details>
  
  
  
  '''
# ---
# name: test_write_tokenization_and_word_segmentation[en]
  '''
  ## Tokenization and Word Segmentation
  - This corpus is built from 4,063 texts, over 87 documents, in 2 files.
  - This corpus contains 115,542 paragraphs in 87 documents.
  - This corpus contains 194,785 sentences and 2,896,932 tokens.
  
  '''
# ---
# name: test_write_tokenization_and_word_segmentation[sv]
  '''
  ## Tokenisering och segmentering
  - Denna korpus är skapad från 4 063 texter, i 87 dokument, som finns i 2 filer.
  - Denna korpus innehåller 115 542 stycken i 87 dokument.
  - Denna korpus innehåller 194 785 meningar och 2 896 932 tokens.
  
  '''
# ---
# name: test_write_top_10_lemmas[en]
  '''
  ## Top 10 base forms
  
  1. utbildningsutskott
  2. utbildningsutskottet
  3. s
  4. betänkande
  5. utgiftsområde
  6. utbildning
  7. och
  8. universitetsforskning
  9. sammanfattning
  10. U
  
  '''
# ---
# name: test_write_top_10_lemmas[sv]
  '''
  ## Topp-10 grundformer
  
  1. utbildningsutskott
  2. utbildningsutskottet
  3. s
  4. betänkande
  5. utgiftsområde
  6. utbildning
  7. och
  8. universitetsforskning
  9. sammanfattning
  10. U
  
  '''
# ---
